--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -21,12 +21,6 @@
 　　他现在太兴奋，他需要清凉使自己的情绪稍微平静一些……
 
 -------
-为什么AI大模型容易误认为strawberry里有2个r？ - 感恩戴德真君的回答<br>
-https://www.zhihu.com/question/11047081559/answer/103876106848
-
-感恩戴德真君： 从来没有所谓的躺平，大家都在灵活奋斗着！ 使用R1模型深度思考，明明分析出3个了，但AI自己好像始终不愿意相信自己的分析结果，一次又一次重新分析，经过147秒的精神内耗后，最终给了我一个2
-
---------
 有产阶级和无产阶级同是人的自我异化。但有产阶级在这种自我异化中感到自己是被满足的和被巩固的，它把这种异化看做自身强大的证明，并在这种异化中获得人的生存的外观。而无产阶级在这种异化中则感到自己是被毁灭的，并在其中看到自己的无力和非人的生存的现实。这个阶级，用黑格尔的话来说，就是在被唾弃的状况下对这种状况的愤慨，这个阶级之所以必然产生这种愤慨，是由于它的人类本性和它那种公开地、断然地、全面地否定这种本性的生活状况相矛盾。
 
 问题不在于目前某个无产者或者甚至整个无产阶级把什么看作自己的目的。问题在于究竟什么是无产阶级，究竟无产阶级根据它本身的这种存在而不得不在历史上做些什么。
@@ -102,6 +96,11 @@ https://www.zhihu.com/question/11047081559/answer/103876106848
 　　原随云笑了笑，道：“就凭这十几种功夫还不够吗？”
 
 -------
+为什么AI大模型容易误认为strawberry里有2个r？ - 感恩戴德真君的回答<br>
+https://www.zhihu.com/question/11047081559/answer/103876106848
+
+感恩戴德真君： 从来没有所谓的躺平，大家都在灵活奋斗着！ 使用R1模型深度思考，明明分析出3个了，但AI自己好像始终不愿意相信自己的分析结果，一次又一次重新分析，经过147秒的精神内耗后，最终给了我一个2
+
 6 大模型决战高考数学新一卷，豆包和元宝并列第一，OpenAI o3 垫底，如何解读它们的表现？ - theigrams的回答<br>
 https://www.zhihu.com/question/1915087130696320803/answer/1915219775535191786
 
@@ -127,3 +126,28 @@ https://www.douban.com/note/705334484/?_i=2839341shLS-Vg
 http://philosophychina.cssn.cn/zxts/wgzx/qmydsqdzxhkdzx/201507/t20150713_2726106.shtml?&back
 
 他在1806年10月8日给Hardenberg的信中说,“我的终生任务,是要给知识学作一个完整清楚的叙述,这个任务没有完成,但已接近完成。”而根据他儿子的所说,他曾打算找一个安静的地方,把他从1793年冬天所想出来的知识学写出一部最后定稿,然后他就再也不想发表任何别的著作了。但这个计划没有来得及完成,他在1814年1月28日就去世了。
+
+--------
+1967年：视察华北、中南和华东地区时的重要指示<br>
+https://liyandi.gitbooks.io/maozedongxuanji/content/shi-cha-hua-bei-3001-zhong-nan-he-hua-dong-di-qu-shi-de-zhong-yao-zhi-shi.html
+
+有些地方前一段好像很乱，其实那是乱了敌人，锻炼了群众。
+
+1981年：关于建国以来党的若干历史问题的决议<br>
+https://www.gov.cn/test/2008-06/23/content_1024934_3.htm
+
+四、实践证明，“文化大革命”不是也不可能是任何意义上的革命或社会进步。它根本不是“乱了敌人”而只是乱了自己，因而始终没有也不可能由“天下大乱”达到“天下大治”。
+
+https://news.sciencenet.cn/sbhtmlnews/2012/10/264326.shtm
+
+会后，胡乔木根据邓小平的安排，于9月28日改出了《汇报提纲》第五稿，作为定稿，以胡耀邦、李昌、王光伟的名义报送邓小平。9月30日，邓小平面呈毛泽东。这一天离毛泽东去世还不到一年，但毛泽东的头脑并不糊涂，他异常敏锐地抓住了要害，这就是“科学技术是生产力”这句话。
+ 
+毛泽东说：我不记得说过这句话。邓小平赶紧说，马克思确实阐述过“科学技术是生产力”的观点，毛泽东态度不变，仍然说：我不记得说过这句话。
+
+不搞科学技术，生产力无法提高
+〔一九六三年十二月十六日〕  <br>
+https://liyandi.gitbooks.io/maozedongxuanji/content/bu-gao-ke-xue-ji-zhu-ff0c-sheng-chan-li-wu-fa-ti-gao.html
+
+科学技术这一仗，一定要打，而且必须打好。过去我们打的是上层建筑的仗，是建立人民政权、人民军队。建立这些上层建筑干什么呢?就是要搞生产。搞上层建筑、搞生产关系的目的就是解放生产力。现在生产关系是改变了，就要提高生产力。不搞科学技术，生产力无法提高。
+
+-----------------------
