--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -95,6 +95,15 @@
 　　胡铁花道：“还有呢？”<br>
 　　原随云笑了笑，道：“就凭这十几种功夫还不够吗？”
 
+　　就在这时，原随云长袖已流云般飞卷而起。<br>
+　　不是流云，是狂风。<br>
+　　狂风卷起，原随云的人似也被卷起。<br>
+　　他的人仿佛突然变成了一只巨大的蝙蝠，自火焰上飞过。<br>
+　　第二层石台上的火焰立刻熄灭。<br>
+　　他身形竟还是在飞旋着，那两只衣袖，就像是一双翼。<br>
+　　翼搧起了风，风搧灭了火。<br>
+　　本已微弱的火势，突然间全部熄灭！
+
 -------
 为什么AI大模型容易误认为strawberry里有2个r？ - 感恩戴德真君的回答<br>
 https://www.zhihu.com/question/11047081559/answer/103876106848
