--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,28 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.5
+最新 8.7
 
+黄国俊/江得胜 - 狂风卷奔云飙
+
+作词 : 徐进良
+作曲 : 郭子
+
+狂风卷奔云飙<br>
+情义相许生死相交<br>
+豪情征万里浩气震九霄<br>
+樽中月笑里刀<br>
+莫问恩仇且把酒浇<br>
+浮沉随浪逝狂歌趁今朝
+
+名和利尽烟消<br>
+英雄多情美人多娇<br>
+千古多少事潇洒一声笑<br>
+名和利尽烟消<br>
+英雄多情美人多娇<br>
+千古多少事潇洒一声笑<br>
+无风云不动云动心如风
+
+------
 水灵/赵文卓 - 回首寒梅
 
 作词: 陈心宁
