--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -26,6 +26,8 @@
 问题不在于目前某个无产者或者甚至整个无产阶级把什么看作自己的目的。问题在于究竟什么是无产阶级，究竟无产阶级根据它本身的这种存在而不得不在历史上做些什么。
 
 ---------
+关于荣誉和耻辱，这个时代有自己的理解，它同以往任何时代对它们的理解都完全不同。在我们这个时代，给自己提出一个很高的目标，是一种使人立即丧失荣誉和良好名声的罪行。——有一位人说，“那个提出这种目标的人自己说过，他想把哲学提高到一种具有自明性的科学的高度，他想成为哲学界的欧几里得（虽然后面这句话不是他自己说的）” “噢，不，”第二位心肠更好的人回答道，“那个人有自己的敌人，这不过是人们给他捏造出来的，我不相信这种话。” ——“那你就自己看吧，这儿印着呢。” ——“呀，这儿真有这种话。我简直不能相信自己的眼晴。这个厚颜无耻的人！这个令人可憎的人！我不袒护他了。”
+
 继哲学之后，数学也宣称拥有证据；甚至在其一些代表人物中，也表现出对知识学的荒谬的优越感，而这只是在我们这个时代，由于折衷主义才可能被允许。现在，完全撇开这一点不谈，即使考虑到它能够而且应该是什么，它的状况也不是很好，它必须承认，尽管在进步过程中它确实变得生成性的，但它的原则完全只能是事实性证据。
 
 因为请算术家，仅仅作为算术家，告诉我，他如何能够产生一个坚实而稳定的“一”，或者几何学家，当他在空间中画出连续的线时，是什么支撑着他的空间，并使之稳定下来——除了直接的直观之外，这些东西以及他的生成所需的许多其他要素，难道是以其他方式赋予他的吗? 
