--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,11 @@
 2025年想法：
 
-最新 8.6：
+最新 8.7：
 
+陶子柒-萧十一郎之连家堡<br>
+https://5sing.kugou.com/bz/3187652.html
+
+-----
 很多事情其他人没有能力去做，需要更优秀的人去做，你们就是极少数有能力做这些事的优秀人才。而我做的事情都很简单，我不是创作者，审美能力谁都有，况且我做的工作也没什么技术含量，只是比较用心而已，但我认为我的分享是有社会价值的。对于有正常社会关系的人来说，受限于大家的社会角色，不方便做这件事，尤其是男性，而我作为一个没什么社交关系的幻想家，刚好适合做这件事。我现在做的就好像有什么驱动着我一样，让我不停地从一个标记指向另一个标记。
 
 可以看到在青河绝恋片头的截图中，有人在爆炸的大火中表演翻跟头，我就做不了这种事，但有人有能力做这件事。
