--- a/text/歌词.md
+++ b/text/歌词.md
@@ -52,6 +52,8 @@
 ![开火](../pic/sub/baozha1.JPG) <br>
 ![爆炸](../pic/sub/baozha2.JPG) <br>
 
+![出嫁](../pic/sub/juelian.JPG)
+
 -------
 ![情深](../pic/sub/jixu.JPG) <br>
 
