--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -6,7 +6,7 @@
 https://5sing.kugou.com/bz/3187652.html
 
 ![狂奔](../pic/sub/saima.JPG) <br>
-![转弯](../pic/sub/machang.JPG) <br>
+![看着](../pic/sub/machang.JPG) <br>
 
 -----
 很多事情其他人没有能力去做，需要更优秀的人去做，你们就是极少数有能力做这些事的优秀人才。而我做的事情都很简单，我不是创作者，审美能力谁都有，况且我做的工作也没什么技术含量，只是比较用心而已，但我认为我的分享是有社会价值的。对于有正常社会关系的人来说，受限于大家的社会角色，不方便做这件事，尤其是男性，而我作为一个没什么社交关系的幻想家，刚好适合做这件事。我现在做的就好像有什么驱动着我一样，让我不停地从一个标记指向另一个标记。
