--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 8.7：
 
+我一直在想一件事，腾讯社交和王者荣耀的地位是永远都无法撼动的吗？
+
+------
 陶子柒-萧十一郎之连家堡<br>
 https://5sing.kugou.com/bz/3187652.html
 
@@ -268,6 +271,8 @@ in my dream
 海贼王42集4分30秒配乐：追いつめられた
 
 海贼王第192集3分26秒：排击 倒下来 巨大豆蔓
+
+海贼王261集20分05秒：田中公平 - 気迫の剣士ゾロ
 
 ------
 马旭东 - 入戏太深
