--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+麦わら海賊団、反撃開始！ (草帽海贼团，反击开始！) - 田中公平 <br> 
+https://www.bilibili.com/video/BV1MU4y1V7b1/
+
+如何看待超 7 万条 ChatGPT 私聊内容在网上被公开收录，OpenAI 称这是个「实验」？ <br>
+https://www.zhihu.com/question/1936742968770945707
+
+-------
 武大图书馆事件中，肖同学为什么没有及时说明自身湿疹情况而是写道歉书？ - 天下布武孙传庭的回答 <br>
 https://www.zhihu.com/question/1934626085330482220/answer/1935293086143087919
 
