--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -91,6 +91,8 @@ sin(666*935°)=-1
 ------
 已经听了一年歌了，我还没有赚到一分钱。可能有人表达过赞助或施舍的意愿，我知道都是开玩笑的了，就是我现在把二维码放出来能不能收到钱？肯定收不到一分钱的了，所以我就不放了，留一个美好的幻想。 6月生了一场重病，好了之后没多久，7月又生了一场更重的病，坚持不去医院，差点以为我要挂了，还好网上查资料喝中药挺过来了，现在我身体基本已经恢复健康了，对搞研究的热情已经减弱了很多，但是对工作更没有兴趣，想赚钱但又不想自取其辱去面试，接下来也不知道何去何从。
 
+其实我在去年7月24日发过二维码的，金额是固定1000，有意愿赞助并且长期关注我的人应该能找到那个二维码，不过我每天的收款限额好像是5000。
+
 ------
 乌龙闯情关第13集35分24秒配乐：神仙歌伴奏
 
@@ -272,7 +274,7 @@ in my dream
 
 海贼王第192集3分26秒：排击 倒下来 巨大豆蔓
 
-海贼王261集20分05秒：田中公平 - 気迫の剣士ゾロ
+海贼王261集20分05秒配乐：田中公平 - 気迫の剣士ゾロ
 
 ------
 马旭东 - 入戏太深
