--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,47 @@
 
 最新 8.7
 
+王心凌 - 还是好朋友
+
+作词: 陈彦甫
+作曲: Myeong Gi Min/Ahn Young Min
+
+已经忘记了到底等待了多久<br>
+你还没把那句话说出口<br>
+街上的情侣手牵着手<br>
+我们只有沉默<br>
+
+从朋友到恋人究竟多少步骤<br>
+你永远只会静静看着我<br>
+期待着某天会萌芽结果<br>
+会不会就这样落空<br>
+
+我们是好朋友 还只是好朋友<br>
+但朋友的线我们早跨过<br>
+脑海里头总是充满你的笑容<br>
+我知道你也有同样感受
+
+我们是好朋友 还只是好朋友<br>
+如果没勇气会这样错过<br>
+一句话就够 其他都别多说<br>
+我等着你开口说爱我
+
+多少寂寞（多少寂寞）<br>
+因为有你的陪伴而度过<br>
+不要想得太多 想象曾有的不该没把握<br>
+
+我们是好朋友 还只是好朋友<br>
+在这个位置等待了多久<br>
+紧紧守着彼此我们都能够接受<br>
+为何要留下为什么<br>
+
+我们是好朋友 还只是好朋友<br>
+如果没勇气会这样错过<br>
+一句话就够 其他都别多说<br>
+我等着你开口说爱我<br>
+说你爱我
+
+------
 黄国俊/江得胜 - 狂风卷奔云飙
 
 作词 : 徐进良
@@ -20,7 +61,6 @@
 名和利尽烟消<br>
 英雄多情美人多娇<br>
 千古多少事潇洒一声笑<br>
-无风云不动云动心如风
 
 ------
 水灵/赵文卓 - 回首寒梅
