--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,32 @@
 
 最新 8.7：
 
+赵洋 - 负我不负她
+
+作词: 关连宇
+作曲: 赵洋
+
+那天十里红妆你笑颜如画<br>
+辜负我的青梅竹马成全她<br>
+迎亲的唢呐让我心碎成沙<br>
+我唯恐泪雨沾湿你的红花
+
+我等着雨落下把回忆冲刷<br>
+千万句的道别离在唇边融化<br>
+从此再不能相约春秋冬夏<br>
+我用尽余生去挣扎去牵挂<br>
+你为什么负我不负她<br>
+等来等去等不到你的回答<br>
+我转身退下心死在那一刹那<br>
+今生欠我的你来世能还吗<br>
+你为什么负我不负她<br>
+当初的情话早已成风飞沙<br>
+你换了一个人陪你花前月下<br>
+从此我带着伤独自浪迹天涯
+
+从此我带着伤独自浪迹天涯
+
+-------
 我一直在想一件事，腾讯社交和王者荣耀的地位是永远都无法撼动的吗？
 
 ------
