--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,35 @@
 
 最新 8.7
 
+纪晓兰 - 妲己吟
+
+作词：张名河 作曲：刘念劬、马有道
+
+星儿闪闪好一双迷人的眼 <br>
+月儿灿灿好一张女儿的脸 <br>
+金簪儿插在鬓边 <br>
+银链儿挂在胸前 <br>
+一身光华一身曲线 <br>
+专把那帝王的魂儿牵 <br>
+啊……喜众神相杀 <br>
+啊……盼众生相残 <br>
+恨的是情满人间恨的是爱满人间 <br>
+恨的是情满人间恨的是爱满人间 <br>
+恨的是情满人间爱满人间 <br>
+
+眉儿弯弯好一副销魂的剑<br>
+指儿尖尖拨一曲断肠的弦<br>
+朱唇儿吻在枕边<br>
+泪珠儿洒在金銮<br>
+一派巧语一派花言<br>
+早许了当初的姐妹愿<br>
+啊……叹悲歌不断<br>
+啊……泣春梦不还<br>
+恨的是身也无援恨的是心也无援<br>
+恨的是身也无援恨的是心也无援<br>
+恨的是身也无援心也无援<br>
+
+------
 王心凌 - 还是好朋友
 
 作词: 陈彦甫
