--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+
+看《萧十一郎》片场吴奇隆吊威亚，这可不是一般人能做到的啊！ <br> 
+https://www.bilibili.com/video/BV1aa411i7yr/
+
+果然是招牌动作，前空翻与后空翻都干净俐落 <br> 
+https://www.bilibili.com/video/BV1mb411o7sN/
+
+-------
 麦わら海賊団、反撃開始！ (草帽海贼团，反击开始！) - 田中公平 <br> 
 https://www.bilibili.com/video/BV1MU4y1V7b1/
 
