--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 8.8：
 
+对于小说和动漫来说，想要设定一个强大的角色很简单，但想要创造一个强大的氛围就不那么容易了，而且要在整个复杂系统中逻辑自洽那就更难了，越符合自然辩证法的创作系统给人的体验就越好。
+
+------
 风云雄霸天下配乐-风云之歌(水晶演奏曲)<br>
 https://5sing.kugou.com/bz/2786339.html
 
@@ -305,6 +308,17 @@ in my dream
 海贼王第192集3分26秒：排击 倒下来 巨大豆蔓
 
 海贼王261集20分05秒配乐：田中公平 - 気迫の剣士ゾロ
+
+海贼王第625集3分23秒配乐：田中公平 - 麦わら海賊団、反撃開始
+
+海贼王第625集5分04秒配乐：田中公平 - 絕體絕命
+
+![对峙](../pic/sub/qingzhi1.JPG) <br>
+![不屑](../pic/sub/mingge1.JPG) <br>
+![冰爆](../pic/sub/qingzhi2.JPG) <br>
+![冰山](../pic/sub/qingzhi3.JPG) <br>
+![生气](../pic/sub/mingge2.JPG) <br>
+![强大](../pic/sub/mingge3.JPG) <br>
 
 ------
 马旭东 - 入戏太深
