--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,58 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.7
+最新 8.8
 
+李荣浩 - 李白
+
+词曲：李白
+
+大部分人要我学习去看 世俗的眼光 <br>
+我认真学习了世俗眼光 世俗到天亮 <br>
+一部外国电影没听懂一句话 <br>
+看完结局才是笑话 <br>
+你看我多乖多聪明多么听话 多奸诈 <br>
+
+喝了几大碗米酒再离开是为了模仿 <br>
+一出门不小心吐的那幅是谁的书画 <br>
+你一天一口一个 亲爱的对方 <br>
+多么不流行的模样 <br>
+都应该练练书法再出门闯荡 才会有人热情买账 <br>
+
+要是能重来 我要选李白 <br>
+几百年前做的好坏 没那么多人猜 <br>
+要是能重来 我要选李白 <br>
+至少我还能写写诗来澎湃 逗逗女孩 <br>
+要是能重来 我要选李白 <br>
+创作也能到那么高端 被那么多人崇拜 <br>
+要是能重来
+
+------
+陈倩倩 - 巧解姻缘天作合
+
+作词: 张子恩/童边
+作曲: 雷蕾
+
+世事艰辛多磨难<br>
+独自少欢乐<br>
+说是会心一笑更难得<br>
+千万别错过<br>
+当轻松时且轻松<br>
+不要苦心去琢磨<br>
+好来好去跟着总有好结果<br>
+开怀饮 放声歌<br>
+人在一起心里热 <br>
+你也说 我也说 <br>
+戏里戏外都是乐 <br>
+日子也好过 <br>
+好日子里出了错 <br>
+错也不算错 <br>
+咱们巧解姻缘说善恶 <br>
+一波三折 <br>
+来到家中不是客 <br>
+欢欢喜喜天作合 <br>
+有情有意一定会有好结果 <br>
+
+--------
 纪晓兰 - 妲己吟
 
 作词：张名河 作曲：刘念劬、马有道
