--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+王者荣耀中，李白为什么这么坑？  <br>
+https://www.zhihu.com/question/624605331
 
 看《萧十一郎》片场吴奇隆吊威亚，这可不是一般人能做到的啊！ <br> 
 https://www.bilibili.com/video/BV1aa411i7yr/
