--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -314,7 +314,8 @@ in my dream
 海贼王第625集5分04秒配乐：田中公平 - 絕體絕命
 
 ![对峙](../pic/sub/qingzhi1.JPG) <br>
-![不屑](../pic/sub/mingge1.JPG) <br>
+![背后](../pic/sub/joker.JPG) <br>
+![轻松](../pic/sub/mingge1.JPG) <br>
 ![冰爆](../pic/sub/qingzhi3.JPG) <br>
 ![冰山](../pic/sub/qingzhi4.JPG) <br>
 ![生气](../pic/sub/mingge2.JPG) <br>
