--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -6,6 +6,8 @@
 
 我说音乐意识流和做爱一样快乐，是指已经体验过做爱但没体验过音乐意识流的人。对于还没做过爱的男生来说，没什么比和心动的女生做爱更快乐的。
 
+上面说的不太准确，不知道怎么简单修改，只能说做爱的快乐属于20多岁男生，音乐意识流的快乐属于像我这样的单身男性，40多岁不知道，可能40多岁有家庭的快乐，我没体验过也不是很向往。关于做爱的结论是具有普适性的，30多岁做爱显然没有20多岁做爱那么心动，音乐意识流不能像做爱那么类比。
+
 ------
 对于小说和动漫来说，想要设定一个强大的角色很简单，但想要创造一个强大的氛围就不那么容易了，而且要在整个复杂系统中逻辑自洽那就更难了，越符合自然辩证法的创作系统给人的体验就越好。
 
