--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,7 +2,7 @@
 
 最新 8.9：
 
-对于自己擅长的领域当然要和别人竞争，对于自己不擅长的领域要摒弃攀比思想，尽可能多的使用交换思想。我在现实中的社交能力是有缺陷的，想要弥补付出的代价太大性价比太低，况且没有社交关系也不会对社会造成什么危害，所以干脆就放弃一切社交的努力，去换取音乐意识流的美好体验。
+对于自己擅长的领域当然要和优秀的人竞争，但没必要向普通人炫耀。对于自己不擅长的领域要摒弃攀比思想，尽可能多的使用交换思想。我在现实中的社交能力是有缺陷的，想要弥补付出的代价太大性价比太低，况且没有社交关系也不会对社会造成什么危害，所以干脆就放弃一切社交的努力，去换取音乐意识流的美好体验。
 
 ------
 对于小说和动漫来说，想要设定一个强大的角色很简单，但想要创造一个强大的氛围就不那么容易了，而且要在整个复杂系统中逻辑自洽那就更难了，越符合自然辩证法的创作系统给人的体验就越好。
