--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 8.9：
 
+音乐意识流是无法被量化的，一旦通过量化来竞争，那么能把音乐意识流比下去的指标有很多种，但我不喜欢听。
+
+-------
 对于自己擅长的领域当然要和优秀的人竞争，但没必要向普通人炫耀。对于自己不擅长的领域要摒弃攀比思想，尽可能多的使用交换思想。我在现实中的社交能力是有缺陷的，想要弥补付出的代价太大性价比太低，况且没有社交关系也不会对社会造成什么危害，所以干脆就放弃一切社交的努力，去换取音乐意识流的美好体验。
 
 ------
