--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,11 @@
 
 最新 8.9：
 
+如果我去面试我该说些什么呢？我感觉我怎么说都像是自取其辱，干脆就老实说我在搞研究吧，面试官：“搞研究啊？”
+
+谁能告诉我面试官心里是怎么想的？我感觉每个面试官的内心想法应该都差不多的吧。
+
+-------
 无垢山庄那段我让ai来朗读，感觉效果不行啊，听起来软绵绵的，和专业的人类配音演员还有很大的差距。
 
 -------
