--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,26 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.8
+最新 8.9
 
+陈楚生 - 有没有人能告诉我
+
+词曲：张毅
+
+当火车开入这座陌生的城市 <br>
+那是从来就没有见过的霓虹 <br>
+我打开离别时你送我的信件 <br>
+忽然感到无比的思念 <br>
+看不见雪的冬天不夜的城市 <br>
+我听见有人欢呼有人在哭泣 <br>
+早习惯穿梭充满诱惑的黑夜 <br>
+但却无法忘记你的脸 <br>
+
+有没有人曾告诉你我很爱你 <br>
+有没有人曾在你日记里哭泣 <br>
+有没有人曾告诉你我很在意 <br>
+在意这座城市的距离
+
+-------
 李荣浩 - 李白
 
 词曲：李荣浩
