--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 8.9：
 
+不能假想有一个上帝视角能预测宇宙（主要指生物）未来的运行轨迹，因为如果这样想了，那么上帝之外又是什么？这是一个悖论，所以宇宙不存在上帝视角，之所以会产生上帝视角是因为人类通常会建模一个仿真系统来进行科学研究（主要指非生物）。所以在人类控制下的计算机程序永远不可能成为agi，如果真的有一天会诞生agi，那肯定是已经和人类世界纠缠在了一起。
+
+-------
 无垢山庄那段我让ai来朗读，感觉效果不行啊，听起来软绵绵的，和专业的人类配音演员还有很大的差距。
 
 -------
