--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -122,6 +122,8 @@ theigrams：观察员 经过个人测试，尽可能将题目转成 LaTeX 公式
 
 事物总是要走向反面的，吹得越高，跌得越重，我是准备跌得粉碎的。那也没有什么要紧，物质不灭，不过粉碎罢了。
 
+共产党员对任何事情都要问一个为什么，都要经过自己头脑的周密思考，想一想它是否合乎实际，是否真有道理，绝对不应盲从，绝对不应提倡奴隶主义 。
+
 --------
 人对事物的认识，总要经过多次的反复，要有一个积累的过程。要积累大量的感性材料，才会引起从感性认识到理性认识的飞跃。关于从实践到感性，再从感性到理性的飞跃的道理，马克思和恩格斯都没有讲清楚。列宁也没有讲清楚，列宁的《唯物主义与经验批判主义》只讲清楚了唯物论，但是没有完全讲清楚认识论。最近艾思奇在高级党校讲话说到这一点是对的。这个道理，中国古人也没有讲清楚。老子、庄子没有讲清楚。墨子讲了些认识论方面的问题，也没有讲清楚。张载、李卓吾、王船山、谭嗣同都没有讲清楚。什么叫哲学？哲学就是认识论，别的没有。双十条第一个十条前面那一段是我写的。我讲了物质变精神，精神变物质。我还讲了哲学，一次不要讲得太长，最多一小时就够了。多讲，越讲越糊涂。我还讲哲学要从课堂书斋里解放出来。我这些话触到了有些人的痛处，他们出来搞“合二而一”反对我。
 
