--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,14 @@
+本人学生，一直认为能力比道德重要，这样的观念思想正确嘛？ - 云卷天舒的回答 <br> 
+https://www.zhihu.com/question/642797407/answer/1935071802629001749
+
+云卷天舒：假设你是一个程序员，学习一个程序框架，比如说C#的.net框架。你通过一本几千页的什么http://ASP.NET CORE 从入门到精通，学会了整个框架的标准应用。前前后后又爬了不少的案例。于是你用既成的规则，几乎能够处理大部分标准化的日常问题。我们可以说你掌握了一门技术吗？这个问题很微妙。如果就从找一份工作来说，如果这份工作面对的大部分问题又非常工业标准化。那估计你只要知道从哪里找这些标准代码Ctrl-C，Ctrl-V的扔给AI，再给一些prompt，说不定你就混成个有模有样的技术人员了。所以，从工业标准的逻辑，你掌握了一门技术。只是这门技术是弥补自动化不足的技术，是一种标准的耗材技术。什么意思？就是说，你掌握的这个东西，属于机械化的能力，这个能力和“你”的关系其实联系不大。它真正的联系对象是——人类。也就是说，在这里，你提供的是一种机器还不能实现的“复杂机械能力”（高级的复制/黏贴）。
+
+如何评价 OpenAI 凌晨发布的 GPT-5？ - 守望者的回答 <br> 
+https://www.zhihu.com/question/1936601885311239615/answer/1937590587902662130
+
+守望者：情感写作奖励模糊性、创造性、主观共鸣。数学推理奖励精确性、逻辑一致性、确定性。这两个目标在损失函数层面就会“打架”——比如数学错误是硬负样本，而情感写作里“不准确”未必是坏事。混合训练时容易出现“灾难性遗忘”模型学会写诗后，数学能力下降，所以这两种能力在底层是有些矛盾的。
+
+-------
 王者荣耀中，李白为什么这么坑？  <br>
 https://www.zhihu.com/question/624605331
 
