--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,24 @@
 
+因为“我”在其纯粹思维的直观中同时被规定，所以这个纯粹思维本身（即，“我”作为这个思维的产物，作为自由的存在）必然对“我”来说是确定的。但是，一个自由的存在，就其本身而言，只能通过赋予自己自由规定的任务来确定。当“我”思考这一点时，它从一个普遍的自由领域作为一个可规定的东西过渡到自身作为在这个领域中被规定的东西，并由此将自身设定为个体，与自身之外的理性和自由相对立。
+
+因为“我”在确定的思维中同时是自由的，并且只有在自由中才能思考确定的东西，所以它也将自由带入到确定的东西中；但是在纯粹的规定性中的自由，就像在自然中一样，是通过自身的存在。因此，“非我”被赋予了一种独立于“我”的存在，并由此才第一次成为一个“物”。就其拥有这种存在而言，它是在“我”的自由所获得的所有规定性中持续存在、可规定的东西。
+
+“我”作为自由但有限的存在的思维，以及“非我”作为独立存在的“物”的思维，是相互规定的。“我”只在其行动的对象中看到自己的自由；它只在它自由地作用于这些对象时才看到这些对象。
+
+在我们的演绎和所有意识所包含的综合的两边，都存在着某种最高的、最终的可规定性。我们已经在主要综合的两边连接了这个可规定性，因此我们的综合已经穷尽，一边是理性世界，另一边是感性对象的世界。既然主要综合应该是一个统一体，那么可以预见，两者将进一步相互规定。
+
+在中央有A，两侧有ß和B，一侧有y，另一侧有G；整体看上去像一个框架，就像一个系列，但意识就像一个圆规。y和G必须相互握住并通过彼此来确定；只有通过这种方式，我们才能闭合圆规，并完成我们的任务；双方必须相互握住，或者更确切地说，必须通过彼此来确定。我们不能直接进行这种确定，否则就会迷失方向；我们必须更深入地进行调查。因此，费希特回到上一节提出的“我”，并将这一调查的所有多样性都与它联系起来。
+
+“内在的我”作为个体，被确定为必须思考的绝对任务——自我确定。正如康德所说，这是“范畴性命令”。自由与存在不同，不受限制；自由必须包含其限制性，必须自我限制。这种确定性有两种方式考虑：
+
+A) 作为必要确定，主动的主观理想主义，这就是那种必须的必须，是一个必要的概念；
+
+B) 客观地，作为某种特定事物，然后确定性就变成一种恒久状态；它会成为这个“我”的性格（基本性格）和本性。
+
+在最高层面，无处不在这种二元性：确定性是确定的，行为就是行为，二者是相同的；现在，对一项任务有两种看法：首先是把必要性想成存在，把确定性想成一种状态。这种双重看法是原初的，由于“我”的原初二元性而必不可少。我们已经知道了这种确定性是什么：个体的确定性，将我设定为多于一个、通过与我的联系而设定的事物；现在，我们不再仅仅讨论纯粹的思考，而是讨论可感知性。必须谨慎地区分开观察和纯粹的思考，就像上面讲的那样；我只是我纯粹思考的产物，现在，我们说：我从理智中把握自己，理智在我之外；但情况并非如此，而是关于我之外的理智和自由的感知，这必须被推导出来。的确，理智在我们之外只是一个先验概念，我认为每个人都是合理的、自由的，但没人要求我通过感官直接感知别人的理智，但我应当从某些现象中推论出这一点。但是，必须在感官世界中出现现象，我们完全被强迫将理智的思想投射到这些现象上，只有这样我们才能做到；它们必须与那种纯粹的思考有关；我们的意图就是推导它们。
+所以，任务是：将我作为个体的确定性（或将这种思考作为我对可感知性的设定）的设定要被描述出来。的确，我们只把自己想象成感官世界中的因果，从这个意义上说，其他自由生物也是先验概念；但这只是因为我们把自己的确定性看作主观的、理想的；客观地看，确定性必须有感官的看法；我是在理智王国中的个，我的思考与它有关；所以，对对象也有与对其他自由生物的看法一样的看法。我们不采用通常的综合方法来陈述这一点，综合本身就包含其中；
+
+-------
 　　萧十一郎又开始在喝酒。 <br>
 　　这么多的酒，本来已足够让他完全麻木，可是现在，他眼睛里还是露出了痛苦之色。 <br>
 　　不但有痛苦，而且还有恐惧。 <br>
