--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+
+为什么嘉庆皇帝一生勤勉，最后清王朝还是不可避免地走向衰落？ - 不要二分法的回答  <br>
+https://www.zhihu.com/question/502392321/answer/3578186558
+
+他是个禁欲主义者，不给个人享受留一点空间。甚至到木兰围场围猎，都完全是“遵守祖制”的需要，而不是因为自己喜欢打猎。他严格按照先祖们的时间、路线，一点也不走样，打上两件东西，就立刻赶回去看奏折，绝不因景致优美而多耽搁一刻。“欲望”在他看来是最危险的东西。他的一生，从没有被声色、珍玩、不良嗜好所迷。
+
+其实，这种勤奋已经成了一种惯性，成了一种“懒惰”着的勤奋。他弄不明白为什么他越努力，形势就越遭。他不明白他已经在中国历史上找遍了所有药方，为什么还是不见效。越到后来，皇帝越对扭转社会大势丧失了信心。他做皇帝已经成了做一天和尚撞一天钟。表面上，他一天到晚，一刻也不休息。实际上，他已经习惯于不动脑子，让祖宗为自己动脑子。“体皇考之心为心，本皇考之治为治。”只要祖宗说过或做过的，他都依样画葫芦地执行贯彻。
+
 本人学生，一直认为能力比道德重要，这样的观念思想正确嘛？ - 云卷天舒的回答 <br> 
 https://www.zhihu.com/question/642797407/answer/1935071802629001749
 
