--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,62 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.9
+最新 8.10
 
+周华健 - 难念的经
+
+作词: 林夕
+作曲: 周华健
+编曲: 李庭匡
+
+笑你我枉花光心计<br>
+爱竞逐镜花那美丽<br>
+怕幸运会转眼远逝<br>
+为贪嗔喜恶怒着迷<br>
+
+责你我太贪功恋势<br>
+怪大地众生太美丽<br>
+悔旧日太执信约誓<br>
+为悲欢哀怨妒着迷<br>
+
+啊 哈 舍不得 璀璨俗世<br>
+啊 哈 躲不开 痴恋的欣慰<br>
+啊 哈 找不到 色相代替<br>
+啊 哈 参一生 参不透 这条难题<br>
+
+吞风吻雨 葬落日 未曾彷徨<br>
+欺山赶海 践雪径 也未绝望<br>
+拈花把酒 偏折煞 世人情狂<br>
+凭这两眼 与百臂 或千手 不能防<br>
+天阔阔 雪漫漫 共谁同航<br>
+这沙滚滚 水皱皱 笑着浪荡<br>
+贪欢一饷 偏教那女儿 情长埋葬
+
+-------
+秋野 - 天地都在我心中
+
+作词: 易茗
+作曲: 赵麟
+
+千秋霸业 <br>
+百战成功 <br>
+边声四起唱大风 <br>
+一马奔腾 <br>
+射雕引弓 <br>
+天地都在我心中 <br>
+
+狂沙路万里 <br>
+关山月朦胧 <br>
+寂寞高手一时俱无踪 <br>
+真情谁与共 <br>
+生死可相从 <br>
+大事临头向前冲 <br>
+开心胸 <br>
+
+一马奔腾 <br>
+射雕引弓 <br>
+天地都在我心中 <br>
+
+-------
 陈楚生 - 有没有人能告诉我
 
 词曲：陈楚生
