--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+关于简谐运动周期公式的简单推导（不超纲） - 泷黎的文章   <br>
+https://zhuanlan.zhihu.com/p/112374401
+
+仰止不止：我想问一下，那个普通简谐运动开始是怎么知道它的运动位移是正弦函数
+
+缘来：对一个函数求二次导等于其本身的负值的初等函数只有正余弦
 
 为什么嘉庆皇帝一生勤勉，最后清王朝还是不可避免地走向衰落？ - 不要二分法的回答  <br>
 https://www.zhihu.com/question/502392321/answer/3578186558
