--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+
+求sinx/x的极限<br>
+https://blog.csdn.net/catcatlm/article/details/52797975
+
 关于简谐运动周期公式的简单推导（不超纲） - 泷黎的文章   <br>
 https://zhuanlan.zhihu.com/p/112374401
 
