--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+牛顿第二定律是如何通过实验推导出来的？ <br>
+https://www.zhihu.com/question/426281174
 
 求sinx/x的极限<br>
 https://blog.csdn.net/catcatlm/article/details/52797975
