--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -5,7 +5,7 @@
 时间就是不停振动的单子，当单子运动时是振动分出来的，所以时间会变慢
 
 ------
-共产党员不需要别人的认同，而是自己内心对自己的认同，也就是根据在客观环境中的自身条件积极地做自己能做的，并寻求更多的认识。
+共产党员不需要别人的认证，而是自己内心对自己的认同，也就是根据在客观环境中的自身条件积极地做自己能做的，并寻求更多的认识。
 
 ------
 不能假想有一个上帝视角能预测宇宙（主要指生物）未来的运行轨迹，因为如果这样想了，那么上帝之外又是什么？这是一个悖论，所以宇宙不存在上帝视角，之所以会产生上帝视角是因为人类通常会建模一个仿真系统来进行科学研究（主要指非生物）。所以在人类控制下的计算机程序永远不可能成为agi，如果真的有一天会诞生agi，那肯定是已经和人类世界纠缠在了一起。
