--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+
+两角和差的正余弦公式的若干证明方法 - 西风冷香的文章 <br>
+https://zhuanlan.zhihu.com/p/361839484
+
+-------
 牛顿第二定律是如何通过实验推导出来的？ <br>
 https://www.zhihu.com/question/426281174
 
