--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 8.10：
+最新 8.11：
 
+为什么我感觉学数学物理的人对各种公式的套用是没有心理负担的，我就做不到这么理所当然。导数的概念是出自at、at^2这些加速度、速度、位移的变化关系，把导数的概念套用在三角函数sin(x)上就这么自然的吗？
+
+------
 时间就是不停振动的单子，当单子运动时是振动分出来的，所以时间会变慢
 
 ------
