--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,5 @@
+三角函数之半角公式 <br>
+https://www.cnblogs.com/Preparing/p/18175118
 
 两角和差的正余弦公式的若干证明方法 - 西风冷香的文章 <br>
 https://zhuanlan.zhihu.com/p/361839484
