--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -4,6 +4,8 @@ https://www.zhihu.com/question/313340154/answer/606683284
 
 我想问个问题，泰勒公式是sin数值解的定义还仅仅是等价计算，如果泰勒公式不是sin的定义，可以通过定义把sin20°算出来吗？一个数值必定要以某个单位1为度量标准的吧？
 
+下面不是有吗？通过半角公式和两角和差公式无限逼近。
+
 三角函数之半角公式 <br>
 https://www.cnblogs.com/Preparing/p/18175118
 
