--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,19 @@
 
+一个特别的例子，展示了这个时代的哲学判断能力
+
+通过一个最近的、仍在持续的令人震惊的例子来具体说明这个时代在哲学方面几乎普遍的松懈和无精神状态，可能是明智的。我说的是这个时代，是指一般情况；因为我不希望下面将要提到名字的那个人认为，我认为他值得成为我反对的对象，或者他自己对我来说足以代表那种普遍的肤浅，这样做实际上会是夸张的，对其他人也是不公平的。只是因为一个整体上更有学识的公众可能被他误导，才使他获得了在这里被点名的荣誉。
+
+通过康德和我们的著作，事情终于发展到这样一个地步：虽然那些在独断论中成长起来的人没有被说服，但在后来受教育的人中，有几个人被引导到这样的信念，并似乎坚定地建立在这个信念上，即现实绝不能被置于事物中，而必须被置于思维及其规律中，尽管没有人真正知道后者应该如何实现。就在这时，我们这个时代产生的最混乱的头脑之一，弗里德里希·威廉·约瑟夫·谢林，竟然成功地通过知识学的主观主义幽灵（这完全是由于他的巨大无知而产生的），凭借他的权威将这些人引回到一个错误，这个错误他们自己本来是太聪明而不会陷入的，并将他们从康德和知识学那里吓回到斯宾诺莎和柏拉图那里，仅仅是因为由于对真正讨论的是什么更加无知，这个人被赋予了更大的勇气。他们不知道该怎么办，反复地以威胁惩罚的言辞要求知识学的作者进行反驳，如果他能的话，而这既不需要康德，也不需要知识学，自莱布尼茨以来就不应该再讨论这个问题了。这个人因此显示了他对什么是思辨以及思辨的目的的绝对无知，以及他对思辨的天生无能，而被他误导的人则显示了他们知识的不确定性，这一点是显而易见的，在前面的提醒之后不需要进一步的证明。但是，这个人的其他辩证艺术、写作才能、诡辩机智和灵活性在多大程度上为被欺骗的人提供了某种借口，以及这个人在精神和艺术方面总体上能够做什么和必须付出什么，可能会提供一个有教育意义的讨论。
+
+为了以最高的公平来进行这个讨论，我们既不会依赖这个人早期的著作，也不会依赖他所谓的同一性系统；尽管后者看起来如此重要，以至于我们被一个常设的文学法庭点名要求反驳或承认它。那么，在这个系统中，正如它在《思辨物理学杂志》第二卷第二期中所阐述的那样（对于这个阐述我们只想顺便说几句话），错误是否被如此巧妙和具有欺骗性地加工，以至于没有外部帮助就无法适当地处理？
+
+这个阐述以第1节开始，声明："我将绝对理性或理性称为理性，只要它被认为是主观和客观的完全无差别。"——现在，通过这个出发点，这个人从一开始就将理性从自身中排除，放弃自己成为理性的，并一次性地考虑他是如何得出所有将要跟随的断言的；——注意到这一点对公众来说可能不太合适，因为这需要假设众所周知缺失的思辨能力。但是，唯一的和绝对的理性，除此之外应该没有其他东西，不可能是主观和客观的无差别，而不同时在同一个不可分割的本质中成为它们的差别；因此，这里除了一个无差别化的理性之外，还暗含了第二个差别化的理性，后者也可能在暗中提供良好的服务；这个错误可能不仅仅是一个小的和无关紧要的失误，而可能会有最重要的后果，即使没有任何思辨的能力，只要不是完全肤浅的摸索，也应该能够把握到。他们没有注意到，通过这个定义，理性现在完全被确定和封闭在自身中，也就是说，它已经死亡，他们的哲学英雄现在虽然可以随意重复他的第一个命题，但永远不会以合法和一致的方式找到从中得出第二个命题的方法，我们也会慷慨地原谅他们。但是，当他真的开始以他的方式重新唤醒死者，并在随后的段落中将"无"和"全体"、"统一"和"自身同一"等谓词应用于他的理性，并成功地将它们证明进入理性中时，他们没有稍微感到惊讶，首先他自己是如何得到这些谓词的，也没有询问他；因为如果第一个定义真的穷尽了理性的本质，那么这些谓词本身首先必须通过分析那个定义从理性中推导出来，作为必然基于理性的东西，而绝不能从天知道哪里获得，通过盲目的任意性应用于理性；读者们没有在这里感受到他们的作者本人身上那个在第1节中暗含的差别化理性的生命和活动；是的，他们甚至没有注意到他在选择他喜欢证明给理性的谓词的顺序上的实质性任意性，这有点难以原谅。
+
+但是，当人们看到这些证明本身，发现那些矛盾、诡辩和荒谬，通过这些，一个未经培养和混乱的想象力盲目地将作者拖过去，并且当人们看到，在从他的第一个命题进行一致推理时，到处都得出与他的断言恰恰相反的结论，却仍然经历到这个畸形的系统被接受，而不是受到普遍和不可磨灭的嘲笑时，人们又该说什么呢？
+
+例如，第2节是这样说的："除了理性之外没有任何东西，而在理性中有一切。如果按照我们在第1节中要求的那样思考理性，人们也会立即意识到，在它之外不可能有任何东西。因为假设在它之外有某物，那么它要么对于理性本身而言在它之外"——真的吗？对于理性本身？在第1节中，我们根本没有听到任何关于对于理性而言可能有某物的说法，但这里悄悄地，在我们不知道它从何而来的情况下，为了证明的需要插入了这个假设，而作者自己并没有按照他在第1节中要求的那样思考理性，而是在他强调这一点的同时，立即引导读者走向这个思想的对立面。但读者可能不会注意到这一点，所以证明可能会成功。他的证明如下："它要么对于理性本身而言在它之外；那么理性就是主观的，这与假设相矛盾；或者它对于理性本身而言不在它之外，那么理性与那个在它之外的东西的关系就像客观与客观的关系，因此它是客观的，但这又一次与假设相矛盾。"顺便说一下：证明的后半部分完全没有意义和理解，读者如果愿意的话可以自己发现，我们不想在这里停留。
+
+-------
 因为“我”在其纯粹思维的直观中同时被规定，所以这个纯粹思维本身（即，“我”作为这个思维的产物，作为自由的存在）必然对“我”来说是确定的。但是，一个自由的存在，就其本身而言，只能通过赋予自己自由规定的任务来确定。当“我”思考这一点时，它从一个普遍的自由领域作为一个可规定的东西过渡到自身作为在这个领域中被规定的东西，并由此将自身设定为个体，与自身之外的理性和自由相对立。
 
 因为“我”在确定的思维中同时是自由的，并且只有在自由中才能思考确定的东西，所以它也将自由带入到确定的东西中；但是在纯粹的规定性中的自由，就像在自然中一样，是通过自身的存在。因此，“非我”被赋予了一种独立于“我”的存在，并由此才第一次成为一个“物”。就其拥有这种存在而言，它是在“我”的自由所获得的所有规定性中持续存在、可规定的东西。
