--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -6,6 +6,8 @@
 
 我问的这个问题的确很蠢，但我认为我是有意识的，ai是没意识的。
 
+我的智商不是很高，我现在也不追求变聪明，我现在追求的是如何让一个模糊的概念更清晰的呈现出来。
+
 ------
 我在这里说话的流畅度、通顺度、文字的优美华丽程度在人类中实在算不上良好，但我经过深思熟虑后表达出来的清晰性和精确性还算是比较优秀的，我这种文字风格恰恰是ai最难模仿的，因为我写的每一句话都是灌注了内力的。
 
