--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,54 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 8.10
+最新 9.13
 
+朱洁仪 - 情不禁
+
+作词:庞绰汶  作曲:李海鹰
+
+多么多么辗转这晚夜<br>
+谁倾诉 这心声<br>
+太多依依不舍说有再会期<br>
+狂苦恋 纠缠不清<br>
+夜静的今天仿佛 感染相思症<br>
+望夜空 盼见天际那流星<br>
+静静一刻的想起 想到多凄美<br>
+你可知道 我心这段情<br>
+
+情不禁 禁制不绝<br>
+今生跟你来约定<br>
+情不禁（情不禁） 借天与地（天与地）<br>
+尽管爱 没余地/直到死<br>
+
+来吧咄咄不息不休走进生命<br>
+来吧抱抱心中爱未停<br>
+毋用暗暗偷偷想你想到深夜静<br>
+来吧再次继续爱情<br>
+
+------
+李艳秋 - 江湖
+
+作词：陈涛 作曲：张宏光
+
+相逢一笑多少年 <br>
+解开腰间龙吟三尺剑 <br>
+向青山深处云雾里 <br>
+劫后余生相聚依依恋恋 <br>
+身在江湖暮色寒 <br>
+归来时人未老心已倦 <br>
+我的足迹尘遮掩 <br>
+长啸一声震落飞花一片 <br>
+
+转身走向人间 <br>
+锁定一世悲欢 <br>
+却将无限深情交给命中情缘 <br>
+
+人生荣辱之间 <br>
+只觉青春如电 <br>
+许多未了心愿……心愿…… <br>
+人生过半 <br>
+
+------
 周华健 - 难念的经
 
 作词: 林夕
