--- a/text/收藏2.md
+++ b/text/收藏2.md
@@ -157,6 +157,8 @@ https://news.sciencenet.cn/sbhtmlnews/2012/10/264326.shtm
  
 毛泽东说：我不记得说过这句话。邓小平赶紧说，马克思确实阐述过“科学技术是生产力”的观点，毛泽东态度不变，仍然说：我不记得说过这句话。
 
+毛泽东于1976年9月9日去世，随后“四人帮”很快覆灭，邓小平复出，他更进一步，断言“科学技术是第一生产力”，这也被归为“邓小平理论”的重要组成部分。
+
 不搞科学技术，生产力无法提高
 〔一九六三年十二月十六日〕  <br>
 https://liyandi.gitbooks.io/maozedongxuanji/content/bu-gao-ke-xue-ji-zhu-ff0c-sheng-chan-li-wu-fa-ti-gao.html
