--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,11 @@
 
 最新 9.13：
 
+脱离了人脑的自然思维结构，人为主观构造出来的复杂数学还有多少潜在的社会价值？
+
+只要把瓦特和法拉第这两个人纳入科学技术的范畴，科学就能永远立于不败之地。
+
+------
 被钓残了。。。逃避中......
 
 当洪秀全很爽，但需要你在湘江战役中顶在最前面当炮灰，你也不能逃避。
