--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,7 +2,14 @@
 
 最新 9.13：
 
-脱离了人脑的自然思维结构，人为主观构造出来的复杂数学还有多少潜在的社会价值？
+萧十一郎39集29分配乐：江湖心儿女情
+
+萧十一郎14集42分32秒配乐：转弯
+
+![沈璧君](../pic/sub/bijun.JPG) <br>
+
+------
+我一直没有想明白的是，脱离了人脑的自然思维结构，人为主观构造出来的复杂数学还有多少潜在的社会价值？
 
 只要把瓦特和法拉第这两个人纳入科学技术的范畴，科学就能永远立于不败之地。
 
