--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+太平天国阉数千小孩当太监，技术差弄死大多数，真有这事吗<br>
+https://baijiahao.baidu.com/s?id=1664305097202465577&wfr=spider&for=pc
+
+不过，这些南方的医生手艺太差，这些孩子刚阉割没多久，就大规模死亡，剩下的几百人也都是残废，根本没法干活，洪秀全没办法，干脆死了这条心，于是从此在皇宫内只用女官，从不用太监。
+
+------
 计算器如何运算tanα cosα sinα 的数值的？ - 電卓院亜紀良的回答  <br>
 https://www.zhihu.com/question/313340154/answer/606683284
 
