--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,48 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.13
+最新 9.14
 
+亚东 - 叱咤
+
+词曲：甘霖
+
+开天辟地斧一把<br>
+阴阳之外魂叱咤<br>
+我以我心看世界<br>
+独领风骚，英姿我功夫中华<br>
+顶天立地独一家<br>
+刚柔之内融叱咤<br>
+我以我血溅轩辕<br>
+壮志豪情，依然我冲冠怒发<br>
+嘿哈嘿哈嘿哈，嘿哈嘿哈嘿哈<br>
+为了江山如画，江山如画<br>
+嘿哈嘿哈嘿哈，嘿哈嘿哈嘿哈<br>
+看我闪躲腾拿，闪躲腾拿，看我闪躲腾拿！
+
+-----
+吴静 - 女儿情
+
+作词:杨洁
+作曲:许镜清
+编曲:张宏光
+
+鸳鸯双栖蝶双飞<br>
+满园春色惹人醉<br>
+悄悄问圣僧<br>
+女儿美不美<br>
+女儿美不美<br>
+
+说什么王权富贵<br>
+怕什么戒律清规<br>
+只愿天长地久<br>
+与我意中人儿紧相随<br>
+爱恋伊 爱恋伊<br>
+愿今生常相随
+
+愿今生常相随<br>
+常相随
+
+------
 朱洁仪 - 情不禁
 
 作词:庞绰汶  作曲:李海鹰
