--- a/text/歌词.md
+++ b/text/歌词.md
@@ -19,6 +19,19 @@
 嘿哈嘿哈嘿哈，嘿哈嘿哈嘿哈<br>
 看我闪躲腾拿，闪躲腾拿，看我闪躲腾拿！
 
+![开枪](../pic/sub/chenzhen1.JPG) <br>
+![陈真](../pic/sub/chenzhen2.JPG) <br>
+![火拼](../pic/sub/chenzhen3.JPG) <br>
+![酒杯](../pic/sub/chenzhen4.JPG) <br>
+![看戏](../pic/sub/chenzhen5.JPG) <br>
+![对拳](../pic/sub/chenzhen6.JPG) <br>
+![擦眼](../pic/sub/chenzhen8.JPG) <br>
+![相爱](../pic/sub/chenzhen9.JPG) <br>
+![闪躲腾拿](../pic/sub/chenzhen10.JPG) <br>
+![齐射](../pic/sub/chenzhen11.JPG) <br>
+![开车](../pic/sub/chenzhen12.JPG) <br>
+![挥棍](../pic/sub/chenzhen7.JPG) <br>
+
 -----
 吴静 - 女儿情
 
