--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -430,54 +430,87 @@ Delta Queens - Dance Around The World
 词曲： FOGLIA/MORONI
 
 Disco dance is our story<br>
+迪斯科舞是我们的光辉往事<br>
 People get together to have fun<br>
+众人齐聚 只为寻欢<br>
 Keep it up tonight<br>
+今夜继续尽情摇摆<br>
 With the disco lights<br>
+在迪斯科的炫光中<br>
 Make it better<br>
+让一切更美妙<br>
 With martini and daiquiri<br>
+在激情的鸡尾酒之间<br>
 
 Feel the beat of the music<br>
+感受音乐的节拍<br>
 Take a ride into this crazy night<br>
+踏上这疯狂之夜的旅程<br>
 Lets keep on dancing<br>
+让我们继续跳舞<br>
 Until the morning light<br>
+直到东方既白<br>
 
 And the energy is on<br>
+马力全开!<br>
 Oh-oh-oh-oh-oh oh~~<br>
 And the power is on<br>
+火力全开!<br>
 Dont turn it off<br>
+不要让激情止于今宵<br>
 Lets sing along<br>
+让我们纵情齐唱<br>
 Oh-oh-oh-oh-oh oh~<br>
 And electricity running<br>
-Like a bomb in the air
+如同电流奔涌<br>
+Like a bomb in the air<br>
+如同晴天霹雳<br>
 
 Dance around the world <br>
-Everybody <br>
-Dance around the world <br>
+舞遍世界<br>
+Everybody Dance around the world <br>
+所有人都一起共舞<br>
 Get up on the floor <br>
+一同登上舞台<br>
 All boys and girls <br>
+所有的男孩与女孩<br>
 Shake your hands <br>
+挥舞你们的手臂<br>
 And move your body <br>
+摇晃你们的身体<br>
 Dancing the night away <br>
+在今晚纵情舞蹈<br>
 
 ……
 
 Keep on dancing together<br>
+今晚一起舞动<br>
 Moscow Tokyo NewYork Paris Rome<br>
+莫斯科、东京、纽约、巴黎、罗马<br>
 Lets keep on dancing<br>
+让我们继续跳舞<br>
 Until the morning light<br>
+直到东方既白<br>
 
 And the energy is on<br>
+马力全开!<br>
 Oh-oh-oh-oh-oh oh~~<br>
 Lets sing along<br>
+让我们纵情齐唱<br>
 Oh-oh-oh-oh-oh oh~~<br>
 
 Oh-oh-oh-oh-oh oh~~<br>
 And the power is on<br>
+火力全开!<br>
 Dont turn it off<br>
+不要让激情止于今宵<br>
 Lets sing along<br>
+让我们纵情齐唱<br>
 Oh-oh-oh-oh-oh oh~~<br>
 And electricity running<br>
+如同电流奔涌<br>
 Like a bomb in the air<br>
+如同晴天霹雳<br>
 
 -------
 歌曲随便挑的，会build成什么样我也不知道。
