--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,17 @@
 
+实际上，对于实践的唯物主义者，即共产主义者而言，问题不在于解释世界，而在于改造世界；他们必须从实践中去批判和改变现存的事物。虽然在费尔巴哈那里偶尔也会出现这类观点，但这些观点从未超越零星的猜测，对他的整体世界观影响甚微，因此在这里只能被视为尚待发展的萌芽。费尔巴哈对感性世界的“看法”一方面局限于对它的单纯直观，另一方面则局限于单纯的感官感受；他所说的“人”，并非“现实的历史的人”，而是抽象的“人”。事实上，“人”具体来说就是“德国人”。在第一种情况——对感性世界的直观中——他必然遇到那些与他的意识和情感相矛盾的事物，从而破坏了他所预设的感性世界各个部分之间，特别是人与自然之间的和谐统一。为消除这种矛盾，他便不得不诉诸一种双重的直观：一种是直接的，只看到事物表面的、显而易见的东西；另一种是更高的、哲学的，能洞察事物真正的本质。但他没有认识到，环绕着他的感性世界并决不是某种开天辟地以来就已存在的、始终如一的东西，而恰恰是工业和社会状况的产物，确切地说，是历史的产物，是历代人类活动的结果，每一代人都站在前人的肩膀上，发展自己的工业与交往方式，不断推进社会秩序以适应变化的需求。就连最简单的“感性确定性”的对象，也仅通过社会的发展、工业和商业交往才得以获得。例如，樱桃树众所周知是在几个世纪以前经由贸易才被引入我们这一地带的，因此它之所以成为费尔巴哈“感性确定性”中的对象，正是特定社会在特定历史时期通过某种行动所赋予的。
+
+此外，正如下面将更清楚地表明的，在这种关于事物如何真实存在和发生的方式的理解中，所有深奥的哲学问题都简单地归结为经验事实。例如，关于人与自然关系的重要问题（更不用说像布鲁诺所说的那样，所谓“自然与历史中的对立”，仿佛二者是彼此分离的“两个东西”——其实人从来都是具有历史性质的自然，同时又拥有自然性质的历史），以及由此衍生出的所有关于“实体”和“自我意识”的那些看似高深莫测的论述，一旦人们意识到：人与自然的著名“统一”自古以来就存在于工业之中，并且在每一历史阶段都因工业发展程度的不同而呈现出不同的形式；同样，人与自然的“斗争”也随着生产力的发展而建立在相应的基础上。反过来，工业与贸易、生活资料的生产与交换，本身又取决于社会各阶级的分配格局和结构划分。因此，费尔巴哈在曼彻斯特看到的只是工厂和机器，而一百年前那里只有纺车和织布机；在罗马的台伯河平原，他如今只发现牧场和沼泽，而在奥古斯都时代，这里却遍布着葡萄园和罗马资本家的别墅。费尔巴哈特别提到自然科学的直观，他提及只有物理学家和化学家的眼睛才能揭示的奥秘；但如果没有工业和贸易，自然科学又何以存在？即使是这种所谓的“纯粹”自然科学，其目的和材料也都源于贸易与工业，源于人们的感性活动。由此可见，这种持续不断的感性劳动与创造，这种生产活动，正是当前整个感性世界存在的根本基础。倘若这种活动哪怕中断一年，费尔巴哈不仅会发现自然界发生巨大变化，而且整个人类世界、他自身的认知能力，甚至他自身存在都将很快消失。当然，外部自然的优先地位依然存在；当然，这一切并不适用于那些通过“等价生成”而产生的原始人类。然而，这种区分只有在把人视为与自然相区别时才有意义。况且，这种先于人类历史的自然，根本不是费尔巴哈所生活的那个自然，也不是今天除个别新出现的澳大利亚珊瑚岛外早已不复存在的自然，因此对费尔巴哈而言，这样的自然也并不存在。
+
+费尔巴哈的确比那些“纯粹的”唯物主义者具有一个巨大的优点，即他认识到人本身也是“感性对象”。但除了这一点之外，他仅仅把人看作“感性对象”，而没有将其视为“感性活动”，因为他仍然停留在理论层面，未能把人置于其既定的社会联系之中，未能从他们所处的现实生存条件出发去理解他们——正是这些条件使他们成为他们现在的样子。因此，他从未真正触及到那些真实存在的、活跃着的人，而是始终停留在抽象的“人”这一概念上；他所能达到的最高程度，也不过是承认“真实的、具体的、活生生的人”存在于感觉之中，也就是说，他所理解的“人与人之间”的一切“人类关系”，除了理想化的爱与友谊之外别无其他。他对当前生存状况毫无批判能力。因此，他永远无法把感性世界理解为构成它的那些个体所进行的全部鲜活的感性活动的整体；于是，当他看到的不是健康的人，而是一群患有瘰疬病、肺结核、积劳成疾的、饥饿不堪的可怜人时，他就不得不求助于“更高层次的直观”和关于“类本质的理想的调和”，从而恰恰在共产主义唯物主义者认为必须改造工业和社会结构的地方，重新跌入了唯心主义的陷阱。
+
+只要费尔巴哈还是唯物主义者，历史就对他而言就不存在；而一旦他考虑历史，他就不再是唯物主义者了。在他的思想中，唯物主义与历史完全分裂开来，这一点其实从上述论述中已经可以清楚地解释。
+
+历史不过是各代人相继更替的过程：每一代人都利用前几代人遗留下来的物质资料、资本和生产力，因而一方面在截然不同的条件下延续旧有的生产活动，另一方面又以全新的方式改变旧有环境。这种发展过程若被思辨地歪曲，就会变成这样一种说法：后期的历史只是为了前期历史的目的而存在。例如，美洲的发现被视为法国大革命得以突破的先决条件，如此一来，历史便拥有了某种独立的目的，仿佛历史成了某个“个人”（诸如“自我意识”、“批判精神”、“唯一者”等）的工具，而人们用“目的”、“使命”、“种子”、“理念”等词所指称的早期历史内容，实际上不过是对后期历史的抽象，是后期历史对前期历史产生实际影响的抽象反映。
+
+随着这一发展进程的推进，相互作用的各个社会圈子不断扩展，原来各民族之间的原始封闭状态被日益发达的生产方式、交往关系以及由此自然产生的各国间劳动分工所打破，历史也就越来越演变为世界历史。比如，当英国发明了一台机器，导致印度与中国成千上万的工人失业，彻底颠覆了这两个帝国的存在形态时，这台机器的发明就成了世界历史性的事件；又如，19世纪糖与咖啡之所以具有世界历史意义，正是因为拿破仑大陆封锁体系造成的短缺，迫使德国人反抗拿破仑，从而成为1813年光荣解放战争的真实基础。由此可见，历史向世界历史的转变，并非某种抽象的“自我意识”、世界精神或别的什么形而上学幽灵的产物，而是一种实实在在的、可以通过经验确定的事实——每一个个体，无论他如何生活、吃喝穿衣，都为此提供了最直接的证明。
+
+--------
 　　剑身上本来刻着四个字颂词“侠义无双”。<br>
 　　现在，仍然是那四个相同的字。<br>
 　　只是字的顺序有一部分颠倒，变成了“侠义双无”。<br>
