--- a/text/看书.md
+++ b/text/看书.md
@@ -1,5 +1,5 @@
 
-实际上，对于实践的唯物主义者，即共产主义者而言，问题不在于解释世界，而在于改造世界；他们必须从实践中去批判和改变现存的事物。虽然在费尔巴哈那里偶尔也会出现这类观点，但这些观点从未超越零星的猜测，对他的整体世界观影响甚微，因此在这里只能被视为尚待发展的萌芽。费尔巴哈对感性世界的“看法”一方面局限于对它的单纯直观，另一方面则局限于单纯的感官感受；他所说的“人”，并非“现实的历史的人”，而是抽象的“人”。事实上，“人”具体来说就是“德国人”。在第一种情况——对感性世界的直观中——他必然遇到那些与他的意识和情感相矛盾的事物，从而破坏了他所预设的感性世界各个部分之间，特别是人与自然之间的和谐统一。为消除这种矛盾，他便不得不诉诸一种双重的直观：一种是直接的，只看到事物表面的、显而易见的东西；另一种是更高的、哲学的，能洞察事物真正的本质。但他没有认识到，环绕着他的感性世界并决不是某种开天辟地以来就已存在的、始终如一的东西，而恰恰是工业和社会状况的产物，确切地说，是历史的产物，是历代人类活动的结果，每一代人都站在前人的肩膀上，发展自己的工业与交往方式，不断推进社会秩序以适应变化的需求。就连最简单的“感性确定性”的对象，也仅通过社会的发展、工业和商业交往才得以获得。例如，樱桃树众所周知是在几个世纪以前经由贸易才被引入我们这一地带的，因此它之所以成为费尔巴哈“感性确定性”中的对象，正是特定社会在特定历史时期通过某种行动所赋予的。
+实际上，对于实践的唯物主义者，即共产主义者而言，问题不在于解释世界，而在于改造世界；他们必须从实践中去批判和改变现存的事物。虽然在费尔巴哈那里偶尔也会出现这类观点，但这些观点从未超越零星的猜测，对他的整体世界观影响甚微，因此在这里只能被视为尚待发展的萌芽。费尔巴哈对感性世界的“看法”一方面局限于对它的单纯直观，另一方面则局限于单纯的感官感受；他所说的“人”，并非“现实的历史的人”，而是抽象的“人”。事实上，“人”具体来说就是“德国人”。在第一种情况——对感性世界的直观中——他必然遇到那些与他的意识和情感相矛盾的事物，从而破坏了他所预设的感性世界各个部分之间，特别是人与自然之间的和谐统一。为消除这种矛盾，他便不得不诉诸一种双重的直观：一种是直接的，只看到事物表面的、显而易见的东西；另一种是更高的、哲学的，能洞察事物真正的本质。但他没有认识到，环绕着他的感性世界决不是某种开天辟地以来就已存在的、始终如一的东西，而恰恰是工业和社会状况的产物，确切地说，是历史的产物，是历代人类活动的结果，每一代人都站在前人的肩膀上，发展自己的工业与交往方式，不断推进社会秩序以适应变化的需求。就连最简单的“感性确定性”的对象，也仅通过社会的发展、工业和商业交往才得以获得。例如，樱桃树众所周知是在几个世纪以前经由贸易才被引入我们这一地带的，因此它之所以成为费尔巴哈“感性确定性”中的对象，正是特定社会在特定历史时期通过某种行动所赋予的。
 
 此外，正如下面将更清楚地表明的，在这种关于事物如何真实存在和发生的方式的理解中，所有深奥的哲学问题都简单地归结为经验事实。例如，关于人与自然关系的重要问题（更不用说像布鲁诺所说的那样，所谓“自然与历史中的对立”，仿佛二者是彼此分离的“两个东西”——其实人从来都是具有历史性质的自然，同时又拥有自然性质的历史），以及由此衍生出的所有关于“实体”和“自我意识”的那些看似高深莫测的论述，一旦人们意识到：人与自然的著名“统一”自古以来就存在于工业之中，并且在每一历史阶段都因工业发展程度的不同而呈现出不同的形式；同样，人与自然的“斗争”也随着生产力的发展而建立在相应的基础上。反过来，工业与贸易、生活资料的生产与交换，本身又取决于社会各阶级的分配格局和结构划分。因此，费尔巴哈在曼彻斯特看到的只是工厂和机器，而一百年前那里只有纺车和织布机；在罗马的台伯河平原，他如今只发现牧场和沼泽，而在奥古斯都时代，这里却遍布着葡萄园和罗马资本家的别墅。费尔巴哈特别提到自然科学的直观，他提及只有物理学家和化学家的眼睛才能揭示的奥秘；但如果没有工业和贸易，自然科学又何以存在？即使是这种所谓的“纯粹”自然科学，其目的和材料也都源于贸易与工业，源于人们的感性活动。由此可见，这种持续不断的感性劳动与创造，这种生产活动，正是当前整个感性世界存在的根本基础。倘若这种活动哪怕中断一年，费尔巴哈不仅会发现自然界发生巨大变化，而且整个人类世界、他自身的认知能力，甚至他自身存在都将很快消失。当然，外部自然的优先地位依然存在；当然，这一切并不适用于那些通过“等价生成”而产生的原始人类。然而，这种区分只有在把人视为与自然相区别时才有意义。况且，这种先于人类历史的自然，根本不是费尔巴哈所生活的那个自然，也不是今天除个别新出现的澳大利亚珊瑚岛外早已不复存在的自然，因此对费尔巴哈而言，这样的自然也并不存在。
 
