--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -6,7 +6,18 @@
 
 萧十一郎14集42分32秒配乐：转弯
 
-![沈璧君](../pic/sub/bijun.JPG) <br>
+23分59秒：凌云幻灭
+
+26分11秒：舞翼烟飞
+
+![伤心](../pic/sub/bijun1.JPG) <br>
+![花开](../pic/sub/bijun2.JPG) <br>
+![冷静](../pic/sub/bijun3.JPG) <br>
+![撒花](../pic/sub/bijun4.JPG) <br>
+![难过](../pic/sub/bijun5.JPG) <br>
+![傲娇](../pic/sub/bijun6.JPG) <br>
+![心痛](../pic/sub/bijun7.JPG) <br>
+![浪漫](../pic/sub/bijun8.JPG) <br>
 
 ------
 我一直没有想明白的是，脱离了人脑的自然思维结构，人为主观构造出来的复杂数学还有多少潜在的社会价值？
