--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1579,6 +1579,55 @@ ZARD - 负けないで
 伴随着我们 直到重逢之日<br>
 
 ---------
+爱内里菜&三枝夕夏 - 七つの海を渡る风のように
+
+作词：爱内里菜、三枝夕夏<br>
+作曲：大野爱果
+
+面对一次又一次"总有一天"<br>
+这一天到底要等到什么时候?<br>
+这一天真的会到来吗?<br>
+总是顾虑着前进的意义<br>
+迟迟迈不出开始的第一步<br>
+为自己找的借口也越来越多<br>
+
+谁都无法回到过去的每一秒<br>
+没人能看清下一秒后的未来<br>
+此时此刻 唯一能让我相信的<br>
+惟有你的心<br>
+
+就像那跨越七大洋的风一样<br>
+在蔚蓝的未来描绘梦想<br>
+每当我痛苦得几乎喘不过气回头看<br>
+都有你热切的身影在守候<br>
+
+闪耀的奇迹溅起一道道浪花<br>
+看吧 它已经洒遍整个世界<br>
+橙色的霞光也染红了水平线<br>
+可是在残酷的现实之中<br>
+理想和极限的边界正逐渐崩溃<br>
+下一次 我一定不放弃<br>
+
+正如追寻阳光而生长的花蕾<br>
+在你的笑容下我将更加坚强<br>
+
+就像那跨越七大洋的风一样<br>
+让鲜艳的花朵在明天绽放<br>
+心中的绿洲让我几乎要停止呼吸<br>
+渴望深深地感受你的存在<br>
+
+即使世界将悲哀地旋转下去<br>
+我也将与你一同生存下去<br>
+不再收起身后的羽翼<br>
+
+就像那跨越七大洋的风一样<br>
+在蔚蓝的未来描绘梦想<br>
+每次只要我拼命奋力回首<br>
+都有你热切的身影在守候<br>
+渴望深深地感受你的存在<br>
+就像那跨越七大洋的风一样<br>
+
+---------
 天空之城  主题曲（粤语版）（我电脑里是4分12秒版本）<br>
 https://dai.ly/k6NDovTChWAE0jD6q6Q
 
