--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+孙中山爱扮洪秀全 要做洪秀全第二<br>
+https://phtv.ifeng.com/program/ffdgm/200804/0421_2309_501318_2.shtml
+
+解说：孙中山小时候常常听一位卢姓老人讲太平天国的故事，他总是听得津津有味，他称赞洪秀全为反清第一英雄，表示要做洪秀全第二。
+
+-------
 太平天国阉数千小孩当太监，技术差弄死大多数，真有这事吗<br>
 https://baijiahao.baidu.com/s?id=1664305097202465577&wfr=spider&for=pc
 
