--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,12 @@
+这日与王夫人请安去，又正遇见迎春奶娘来家请安，说起孙绍祖甚属不端，“姑娘惟有背地里淌眼抹泪的，只要接了来家散诞两日”。王夫人因说：“我正要这两日接他去，只因七事八事的都不遂心，[庚辰双行夹批：草蛇灰线，后文方不见突然。]所以就忘了。前儿宝玉去了，回来也曾说过的。[庚辰双行夹批：补明。]明日是个好日子，就接他去。”正说着，贾母打发人来找宝玉，说：“明儿一早往天齐庙还愿。”宝玉如今巴不得各处去逛逛，听见如此，喜的一夜不曾合眼，盼明不明的。
 
+那时迎春已来家好半日，孙家的婆娘媳妇等人已待过晚饭，打发回家去了。迎春方哭哭啼啼的在王夫人房中诉委曲，说孙绍祖“一味好色，好赌酗酒，家中所有的媳妇丫头将及淫遍。略劝过两三次，便骂我是‘醋汁子老婆拧出来的’。[庚辰双行夹批：奇文奇骂。为迎春一哭。恨薛蟠何等刚霸，偏不能以此语（及）金桂，使人忿忿。世（此）书中全是不平，有全是意外之料（辞）。]又说老爷曾收着他五千两银子，不该使了他的。如今他来要了两三次不得，他便指着我的脸说道：‘你别和我充夫人娘子，你老子使了我五千银子，把你准折买给我的。好不好，打一顿撵在下房里睡去。当日有你爷爷在时，希图上我们的富贵，赶着相与的。论理我和你父亲是一辈，如今强压我的头，卖了一辈。又不该作了这门亲，倒没的叫人看着赶势利似的。’”[庚辰双行夹批：不通，可笑。遁词如开（闻）。]一行说，一行哭的呜呜咽咽，连王夫人并众姊妹无不落泪。王夫人只得用言语解劝说：“已是遇见了这不晓事的人，可怎么样呢。想当日你叔叔也曾劝过大老爷，不叫作这门亲的。大老爷执意不听，一心情愿，到底作不好了。我的儿，这也是你的命。”迎春哭道：“我不信我的命就这么苦！从小儿没了娘，幸而过婶子这边过了几年心净日子，如今偏又是这么个结果！”王夫人一面解劝，一面问他随意要在那里安歇。迎春道：“乍乍的离了姊妹们，只是眠思梦想。二则还记挂着我的屋子，还得在园里旧房子里住得三五天，死也甘心了。不知下次还可能得住不得住了呢！”王夫人忙劝道：“快休乱说。不过年轻的夫妻们，斗牙斗齿，亦是万万人之常事，何必说这丧话。”仍命人忙忙的收拾紫菱洲房屋，命姊妹们陪伴着解释，**又吩咐宝玉：“不许在老太太跟前走漏一些风声，倘或老太太知道了这些事，都是你说的。”**宝玉唯唯的听命。
+
+迎春是夕仍在旧馆安歇。众姊妹等更加亲热异常。一连住了三日，才往邢夫人那边去。先辞了贾母及王夫人，然后与众姊妹分别，更皆悲伤不舍。还是王夫人薛姨妈等安慰劝释，方止住了，过那边去。[庚辰双行夹批：几（凡）迎春之文皆从宝玉眼中写出。前“悔聚（娶）河东狮”是实写，“误家（嫁）中去（山）狼”出迎春口中，可为实（虚）写，以虚虚实实变纫（幻）体格，各尽其法。]又在邢夫人处住了两日，就有孙绍祖的人来接去。迎春虽不愿去，无奈惧孙绍祖之恶，只得勉强忍情作辞了。邢夫人本不在意，也不问其夫妻和睦，家务烦难，只面情塞责而已。终不知端的，且听下回分解。
+
+[蒙回末总批：此文一为择婿者说法，一为择妻者说法，择婿者必以得人物轩昂、家道丰厚、阴袭公子为快，择妻者必以得容貌艳丽、妆奁富厚、子女盈门为快，殊不知以貌取人失之子羽。试者桂花夏家指择孙家，何等可羡可乐。卒至迎春含悲，薛蟠遗恨，可慨矣夫！]
+
+------
 实际上，对于实践的唯物主义者，即共产主义者而言，问题不在于解释世界，而在于改造世界；他们必须从实践中去批判和改变现存的事物。虽然在费尔巴哈那里偶尔也会出现这类观点，但这些观点从未超越零星的猜测，对他的整体世界观影响甚微，因此在这里只能被视为尚待发展的萌芽。费尔巴哈对感性世界的“看法”一方面局限于对它的单纯直观，另一方面则局限于单纯的感官感受；他所说的“人”，并非“现实的历史的人”，而是抽象的“人”。事实上，“人”具体来说就是“德国人”。在第一种情况——对感性世界的直观中——他必然遇到那些与他的意识和情感相矛盾的事物，从而破坏了他所预设的感性世界各个部分之间，特别是人与自然之间的和谐统一。为消除这种矛盾，他便不得不诉诸一种双重的直观：一种是直接的，只看到事物表面的、显而易见的东西；另一种是更高的、哲学的，能洞察事物真正的本质。但他没有认识到，环绕着他的感性世界决不是某种开天辟地以来就已存在的、始终如一的东西，而恰恰是工业和社会状况的产物，确切地说，是历史的产物，是历代人类活动的结果，每一代人都站在前人的肩膀上，发展自己的工业与交往方式，不断推进社会秩序以适应变化的需求。就连最简单的“感性确定性”的对象，也仅通过社会的发展、工业和商业交往才得以获得。例如，樱桃树众所周知是在几个世纪以前经由贸易才被引入我们这一地带的，因此它之所以成为费尔巴哈“感性确定性”中的对象，正是特定社会在特定历史时期通过某种行动所赋予的。
 
 此外，正如下面将更清楚地表明的，在这种关于事物如何真实存在和发生的方式的理解中，所有深奥的哲学问题都简单地归结为经验事实。例如，关于人与自然关系的重要问题（更不用说像布鲁诺所说的那样，所谓“自然与历史中的对立”，仿佛二者是彼此分离的“两个东西”——其实人从来都是具有历史性质的自然，同时又拥有自然性质的历史），以及由此衍生出的所有关于“实体”和“自我意识”的那些看似高深莫测的论述，一旦人们意识到：人与自然的著名“统一”自古以来就存在于工业之中，并且在每一历史阶段都因工业发展程度的不同而呈现出不同的形式；同样，人与自然的“斗争”也随着生产力的发展而建立在相应的基础上。反过来，工业与贸易、生活资料的生产与交换，本身又取决于社会各阶级的分配格局和结构划分。因此，费尔巴哈在曼彻斯特看到的只是工厂和机器，而一百年前那里只有纺车和织布机；在罗马的台伯河平原，他如今只发现牧场和沼泽，而在奥古斯都时代，这里却遍布着葡萄园和罗马资本家的别墅。费尔巴哈特别提到自然科学的直观，他提及只有物理学家和化学家的眼睛才能揭示的奥秘；但如果没有工业和贸易，自然科学又何以存在？即使是这种所谓的“纯粹”自然科学，其目的和材料也都源于贸易与工业，源于人们的感性活动。由此可见，这种持续不断的感性劳动与创造，这种生产活动，正是当前整个感性世界存在的根本基础。倘若这种活动哪怕中断一年，费尔巴哈不仅会发现自然界发生巨大变化，而且整个人类世界、他自身的认知能力，甚至他自身存在都将很快消失。当然，外部自然的优先地位依然存在；当然，这一切并不适用于那些通过“等价生成”而产生的原始人类。然而，这种区分只有在把人视为与自然相区别时才有意义。况且，这种先于人类历史的自然，根本不是费尔巴哈所生活的那个自然，也不是今天除个别新出现的澳大利亚珊瑚岛外早已不复存在的自然，因此对费尔巴哈而言，这样的自然也并不存在。
