--- a/text/看书.md
+++ b/text/看书.md
@@ -1,6 +1,6 @@
 这日与王夫人请安去，又正遇见迎春奶娘来家请安，说起孙绍祖甚属不端，“姑娘惟有背地里淌眼抹泪的，只要接了来家散诞两日”。王夫人因说：“我正要这两日接他去，只因七事八事的都不遂心，[庚辰双行夹批：草蛇灰线，后文方不见突然。]所以就忘了。前儿宝玉去了，回来也曾说过的。[庚辰双行夹批：补明。]明日是个好日子，就接他去。”正说着，贾母打发人来找宝玉，说：“明儿一早往天齐庙还愿。”宝玉如今巴不得各处去逛逛，听见如此，喜的一夜不曾合眼，盼明不明的。
 
-那时迎春已来家好半日，孙家的婆娘媳妇等人已待过晚饭，打发回家去了。迎春方哭哭啼啼的在王夫人房中诉委曲，说孙绍祖“一味好色，好赌酗酒，家中所有的媳妇丫头将及淫遍。略劝过两三次，便骂我是‘醋汁子老婆拧出来的’。[庚辰双行夹批：奇文奇骂。为迎春一哭。恨薛蟠何等刚霸，偏不能以此语（及）金桂，使人忿忿。世（此）书中全是不平，又全是意外之料（辞）。]又说老爷曾收着他五千两银子，不该使了他的。如今他来要了两三次不得，他便指着我的脸说道：‘你别和我充夫人娘子，你老子使了我五千银子，把你准折买给我的。好不好，打一顿撵在下房里睡去。当日有你爷爷在时，希图上我们的富贵，赶着相与的。论理我和你父亲是一辈，如今强压我的头，卖了一辈。又不该作了这门亲，倒没的叫人看着赶势利似的。’”[庚辰双行夹批：不通，可笑。遁词如开（闻）。]一行说，一行哭的呜呜咽咽，连王夫人并众姊妹无不落泪。王夫人只得用言语解劝说：“已是遇见了这不晓事的人，可怎么样呢。想当日你叔叔也曾劝过大老爷，不叫作这门亲的。大老爷执意不听，一心情愿，到底作不好了。我的儿，这也是你的命。”迎春哭道：“我不信我的命就这么苦！从小儿没了娘，幸而过婶子这边过了几年心净日子，如今偏又是这么个结果！”王夫人一面解劝，一面问他随意要在那里安歇。迎春道：“乍乍的离了姊妹们，只是眠思梦想。二则还记挂着我的屋子，还得在园里旧房子里住得三五天，死也甘心了。不知下次还可能得住不得住了呢！”王夫人忙劝道：“快休乱说。不过年轻的夫妻们，斗牙斗齿，亦是万万人之常事，何必说这丧话。”仍命人忙忙的收拾紫菱洲房屋，命姊妹们陪伴着解释，又吩咐宝玉：“不许在老太太跟前走漏一些风声，倘或老太太知道了这些事，都是你说的。”宝玉唯唯的听命。
+那时迎春已来家好半日，孙家的婆娘媳妇等人已待过晚饭，打发回家去了。迎春方哭哭啼啼的在王夫人房中诉委曲，说孙绍祖“一味好色，好赌酗酒，家中所有的媳妇丫头将及淫遍。略劝过两三次，便骂我是‘醋汁子老婆拧出来的’。[庚辰双行夹批：奇文奇骂。为迎春一哭。恨薛蟠何等刚霸，偏不能以此语（及）金桂，使人忿忿。世（此）书中全是不平，又全是意外之料（辞）。]又说老爷曾收着他五千两银子，不该使了他的。如今他来要了两三次不得，他便指着我的脸说道：‘你别和我充夫人娘子，你老子使了我五千银子，把你准折卖给我的。好不好，打一顿撵在下房里睡去。当日有你爷爷在时，希图上我们的富贵，赶着相与的。论理我和你父亲是一辈，如今强压我的头，卖了一辈。又不该作了这门亲，倒没的叫人看着赶势利似的。’”[庚辰双行夹批：不通，可笑。遁词如开（闻）。]一行说，一行哭的呜呜咽咽，连王夫人并众姊妹无不落泪。王夫人只得用言语解劝说：“已是遇见了这不晓事的人，可怎么样呢。想当日你叔叔也曾劝过大老爷，不叫作这门亲的。大老爷执意不听，一心情愿，到底作不好了。我的儿，这也是你的命。”迎春哭道：“我不信我的命就这么苦！从小儿没了娘，幸而过婶子这边过了几年心净日子，如今偏又是这么个结果！”王夫人一面解劝，一面问他随意要在那里安歇。迎春道：“乍乍的离了姊妹们，只是眠思梦想。二则还记挂着我的屋子，还得在园里旧房子里住得三五天，死也甘心了。不知下次还可能得住不得住了呢！”王夫人忙劝道：“快休乱说。不过年轻的夫妻们，斗牙斗齿，亦是万万人之常事，何必说这丧话。”仍命人忙忙的收拾紫菱洲房屋，命姊妹们陪伴着解释，又吩咐宝玉：“不许在老太太跟前走漏一些风声，倘或老太太知道了这些事，都是你说的。”宝玉唯唯的听命。
 
 迎春是夕仍在旧馆安歇。众姊妹等更加亲热异常。一连住了三日，才往邢夫人那边去。先辞了贾母及王夫人，然后与众姊妹分别，更皆悲伤不舍。还是王夫人薛姨妈等安慰劝释，方止住了，过那边去。[庚辰双行夹批：几（凡）迎春之文皆从宝玉眼中写出。前“悔聚（娶）河东狮”是实写，“误家（嫁）中去（山）狼”出迎春口中，可为实（虚）写，以虚虚实实变纫（幻）体格，各尽其法。]又在邢夫人处住了两日，就有孙绍祖的人来接去。迎春虽不愿去，无奈惧孙绍祖之恶，只得勉强忍情作辞了。邢夫人本不在意，也不问其夫妻和睦，家务烦难，只面情塞责而已。终不知端的，且听下回分解。
 
