--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 9.14：
+最新 9.15：
 
+我们在思考问题时，经常会碰到不需要的地方自行脑补，有需要的地方却忽略了，而实践恰恰能通过强感受性来指明做事的优先级。
+
+-------
 萧十一郎39集29分配乐：江湖心儿女情
 
 萧十一郎14集42分32秒配乐：转弯
