--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,61 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.14
+最新 9.15
 
+屠洪刚 - 藏龙卧虎
+
+作词:任卫新 作曲:卞留念
+
+大河如龙 群山如虎 <br>
+长啸仰天 长歌当哭 <br>
+龙盘虎踞 有钟有鼓 <br>
+龙腾虎跃 有文有武 <br>
+
+立身堂堂男子汉<br>
+壮怀凛凛大丈夫<br>
+日月沉浮风云吐<br>
+好个中华民族藏龙卧虎<br>
+举目江山山无数<br>
+放眼流光光飞渡<br>
+日月沉浮风云吐<br>
+好个中华民族藏龙卧虎<br>
+
+一把剑划开万丈天幕 <br>
+一腔血注解千秋史书 <br>
+降大任 苦心志 劳筋骨 <br>
+担道义 著文章 展抱负 <br>
+
+好一个中华民族藏龙卧虎<br>
+
+------
+关淑怡/张学友 - 年少无情
+
+作词: 陈少琪
+作曲: 顾嘉辉
+
+啊..啊..<br>
+啊..啊..<br>
+生生世世未静 大地歪风占领<br>
+扰乱乱无情 人自怨命<br>
+昏昏杀气末日 男儿无忌挥圣剑<br>
+判断正邪 舍我生命尘埃已定（如早已注定）<br>
+绝境乱世 悲剑侠戚戚寻梦<br>
+再回头心意凝重　方寸乱一切也空<br>
+万恶呼风唤雨　魔与道水火难共<br>
+少年情早已忘掉　心事枉送<br>
+
+飘于莽莽大地 踏路轻霜百里<br>
+娟娟淡落大地 情若去雁<br>
+萧萧刹刹日月 男儿情义怎判决<br>
+爱恨了断 烟散迹绝　情丝也绝（何解更决绝）<br>
+绝境乱世 悲剑侠戚戚寻梦<br>
+再回头心意凝重 方寸乱一切也空<br>
+万恶呼风唤雨 魔与道水火难共<br>
+少年情早已忘掉 心事枉送<br>
+啊..啊..<br>
+啊..啊..
+
+------
 亚东 - 叱咤
 
 词曲：甘霖
