--- a/text/歌词.md
+++ b/text/歌词.md
@@ -45,7 +45,7 @@
 少年情早已忘掉　心事枉送<br>
 
 飘于莽莽大地 踏路轻霜百里<br>
-娟娟淡落大地 情若去雁<br>
+娟娟淡落容颜 情若去雁<br>
 萧萧刹刹日月 男儿情义怎判决<br>
 爱恨了断 烟散迹绝　情丝也绝（何解更决绝）<br>
 绝境乱世 悲剑侠戚戚寻梦<br>
