--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,15 @@
+如果我让 AI 写一篇 AI 无法识别出 AI 感的回答，AI 能做到么？ - 杨个毛的回答 <br>
+https://www.zhihu.com/question/1948472912936924481/answer/1949226250758521800
+
+这样的话你的矛和盾就不是什么问题：造假越简单，也就意味着辨假越难，反之亦然。
+
+假如某天发现《红楼梦》后四十回确实是曹雪芹写的，现在这些吐槽后四十回水平不行的人会怎么样？ - 余小山的回答 <br>
+https://www.zhihu.com/question/285719774/answer/1970738648
+
+请注意，即便是这两处“啊”，所在的句子也只是表达感叹本身。“我的娘啊”表达惊叹，“妙啊”表达赞叹。除此再无“啊”字，并且，在11～80整整70回里，无一个“啊”字。可知，曹雪芹很少在他小说里用“啊”字。
+
+《红楼梦》第六十七回不是曹雪芹所写<br>
+https://www.thepaper.cn/newsDetail_forward_23566318
 
 孙中山爱扮洪秀全 要做洪秀全第二<br>
 https://phtv.ifeng.com/program/ffdgm/200804/0421_2309_501318_2.shtml
