--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,11 @@
+假如某天发现《红楼梦》后四十回确实是曹雪芹写的，现在这些吐槽后四十回水平不行的人会怎么样？ - 罗汗果泡大海的回答  <br>
+https://www.zhihu.com/question/285719774/answer/1020939629
+
+罗汗果泡大海：
+藕池塘，杨庭院，昼永人闲。
+不可能。
+一个反例就够了。林黛玉薛宝钗掉包，弄一出豪门少爷的代嫁新娘，最后白月光吐血而亡——这种桥段，曹雪芹就是喝了也写不出来。
+
 如果我让 AI 写一篇 AI 无法识别出 AI 感的回答，AI 能做到么？ - 杨个毛的回答 <br>
 https://www.zhihu.com/question/1948472912936924481/answer/1949226250758521800
 
