--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,20 @@
 
 最新 9.15：
 
+《剑神一笑》代笔研究 <br>
+https://bbs.gulongbbs.com/forum.php?mod=viewthread&tid=5025&extra=page%3D4
+
+　　帐篷的前面敞开了一块，可以看到里面摆着一张桌子，桌子旁边坐着两个人。 <br>
+　　一个是面容冷峻的西门吹雪，一个是满脸灿然娇笑的牛肉汤。 <br>
+　　…… <br>
+　　牛肉汤指着黄石镇上一个踽踽而行的人影，道：“来了！来了！” <br>
+　　西门吹雪依旧是那副冷峻的表情。 <br>
+　　牛肉汤似乎毫不介意那副冷峻的表情，仍然用她银铃似的娇声，道：“我昨晚自作主张，要黄石镇上所有的人，一个一个来这里。你看，现在第一个人来了。” <br>
+　　…… <br>
+　　棺材店老板那张原本像个死人的脸上，忽然也有了血色，简直像换了个人，由死人变成皇帝似的，他用极高兴的口吻说：“对呀，有了钱，咱们只管花天酒地去，还管他什么剑法？” <br>
+　　（描写人物对话表情神色还是太动声色，烟火气重）
+
+-------
 我们在思考问题时，经常会碰到不需要的地方自行脑补，有需要的地方却忽略了，而实践恰恰能通过强感受性来指明做事的优先级。
 
 -------
