--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,28 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.15
+最新 9.16
 
+陈少华 - 九月九的酒
+
+作词: 陈树
+作曲: 朱德荣
+
+又是九月九 重阳夜难聚首 <br>
+思乡的人儿 飘流在外头 <br>
+又是九月九 愁更愁情更忧 <br>
+回家的打算 始终在心头 <br>
+
+走走走走走啊走 走到九月九 <br>
+他乡没有烈酒 没有问候 <br>
+走走走走走啊走 走到九月九 <br>
+家中才有自由 才有九月九 <br>
+
+亲人和朋友 举起杯倒满酒 <br>
+饮尽这乡愁 醉倒在家门口 <br>
+
+噢
+
+------
 屠洪刚 - 藏龙卧虎
 
 作词:任卫新 作曲:卞留念
@@ -1635,6 +1656,9 @@ ZARD - 负けないで
 伴随着我们 直到重逢之日<br>
 
 ---------
+【4K 爱内里菜 三枝夕夏】名侦探柯南主题曲《七つの海を渡る風のように》原版MV 4K AI超高清修复 <br>
+https://www.bilibili.com/video/BV1ch411q78h
+
 爱内里菜&三枝夕夏 - 七つの海を渡る风のように
 
 作词：爱内里菜、三枝夕夏<br>
