--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -16,7 +16,7 @@ https://bbs.gulongbbs.com/forum.php?mod=viewthread&tid=5025&extra=page%3D4
 　　（描写人物对话表情神色还是太动声色，烟火气重）
 
 -------
-我们在思考问题时，经常会碰到不需要的地方自行脑补，有需要的地方却忽略了，而实践恰恰能通过强感受性来指明做事的优先级。
+我们在思考问题时，经常会碰到不需要的地方自行脑补，有需要的地方却忽略了，而实践恰恰能通过强感受性来指明选择的优先级。
 
 -------
 萧十一郎39集29分配乐：江湖心儿女情
