--- a/text/看书.md
+++ b/text/看书.md
@@ -1,3 +1,17 @@
+
+确实，通过一封信几乎无法令人相信，我们两人中是谁犯了重大的错误并且抱有成见，以及是谁的哲学研究贫乏肤浅——这是问题的关键。您在上封信中所宣讲的真理，对我来说也极为熟悉；但您所做的所有关于我以及我的意见的说明则是根本无视并贬低了我的立场。
+
+我可以用短短几句话向您指明我们的分歧点——“绝对”（关于它以及它的规定，我完全赞同您的意见，并且我长期以来一直抱着这种绝对的观点）“是在量的差异的形式中存在”。您说我在我的阐述中这样断言。这显然是您的断言；而恰恰因为这一点我认为您的体系是错误的，并且把对您这个体系的阐述搁在一边，因为原则上错误的东西，任何推理和解释都无法给予纠正。斯宾诺莎以及所有独断论者也都是如此，这是自相矛盾的；如果绝对可以以任何一种形式存在，那么绝对也就不再是绝对了。而绝对显现于其中的那个形式——当然是量的形式，在这点上我赞同您的意见——是从哪里产生的，它的真正的家园在哪里，或者，一是如何成为无限，成为杂多的总和，这便是已经接近尾声的思辨所必须解决的问题，并且是您定会置之不理的问题，因为您已经发现，这形式是在绝对之中，并且同时伴随着绝对。但是，知识学唯心主义和康德的唯心主义恰恰便处于这块被您的新体系拒之门外，并且（人们这时才能肯定地说）您永远不会了解的区域之中，这个唯心主义决不处于您为它所安排的那样一个底层的位置上。
+
+请您是否考虑一下这个您不能忽略的要点，并且同时考虑一下，您怎么竟会忽略了这一点——因为您直接随着您的思维走向绝对，却没有回想您的思维，没有想到您的思维大概仅仅想通过它自己的内在规律来为您建构绝对——这样您便会很快了解真正的唯心主义，并且看到，您是如何不断地误解我。
+
+您的信还有第二部分，读这部分使我感到痛苦。您怎么竟会不侮辱别人就无法表白自己呢？并且您怎么那么乐于把您的对方想象得那样胆怯虚伪呢？恳请您从我的处境出发来考虑一下，当我不得不声明，没有任何人，绝对没有任何人理解我时，我应当如何来对待您呢？难道要我装出您根本不在并且没有写过信的样子吗？事后我当然看出，这是最好的方法；但亲爱的谢林，当时我并不了解您的那种易受刺激的敏感性，以及人们向您——似乎是不可根除地——透露的那些敌视我的真正想法。实际上，我是把这种处理问题的方式看作是一种最友好的方式。我当然必须相信，您在您的《先验唯心论体系》中（这是当时我手头拥有的您的最新著作）想阐述先验唯心论——这是在康德和我的著作中展现在世界面前的唯一可能的唯心论——而很明显，您当时没有理解它，现在还是没有理解它，并且在您行走的道路上，您将永远不会理解它。您说：“我在公众面前谈到此事时，我就已经自己知道，您有一个完全不同的目的，那么我呢？”亲爱的，我究竟是从何时起知道这一点的呢？您甚至在您的新阐述的导论中保证，您甚至在写有上述话的信中保证，我们会走到一起来的。
+
+而现在您甚至要我对尼古拉的解释负责！如果尼古拉的门徒看到他们的企图得逞，他们会举行盛大的庆典。我不愿意公开谈及我们出现分歧的原因，是我想等待，直到我觉得有必要说时为止，除了这个原因外，也许还有其他的原因。我曾希望，您会思考——我承认，我至今仍这样希望——这样，就可以避免不快，以及避免从我们之间的公开争论中无疑将产生的混乱，而一个像您这样非凡的头脑就可以继续从事我所认为的优秀事业。此外，我从未认为，您应当出于友谊或对我的照顾把您有兴趣的事情让给我做。我就我个人而言已下定决心，决不公开地提及您，除非我们的分歧被排除（如果这是可能的话），或者，除非您用进攻来迫使我不得不这样做；并且，即使出现后一种情况，我的行为也将只会符合我对您的天才的尊重以及我们过去的友好关系。
+
+我极为希望与您保持通信；但条件是，您要放弃那些人身侮辱。您不会愿意，我在看到您的手迹，您的印章（它们过去曾给我带来愉快）时感到痛苦，而让自己防范您。
+
+------
 这日与王夫人请安去，又正遇见迎春奶娘来家请安，说起孙绍祖甚属不端，“姑娘惟有背地里淌眼抹泪的，只叫接了来家，散诞两日”。王夫人听说：“我正要这两日接他去，只因七事八事的都不遂心，[庚辰双行夹批：草蛇灰线，后文方不见突然。]所以就忘了。前儿宝玉去了，回来也曾说过的。[庚辰双行夹批：补明。]明日是个好日子，就接他去。”正说着，贾母打发人来找宝玉，说：“明儿一早往天齐庙还愿去。”宝玉如今巴不得各处去逛逛，听见如此，喜的一夜不曾睡着，盼明不明的。
 
 那时迎春已来家好半日，孙家的婆娘媳妇等人已待过晚饭，打发回家去了。迎春方哭哭泣泣的告诉王夫人这些委曲，说孙绍祖“一味好色，好赌酗酒，家中所有的媳妇丫头将及淫遍。略劝过两三次，便骂我醋汁子老婆拧出来的。[庚辰双行夹批：奇文奇骂。为迎春一哭。恨薛蟠何等刚霸，偏不能以此语（及）金桂，使人忿忿。世（此）书中全是不平，又全是意外之料（辞）。]又说老爷曾收着他五千两银子，不该使了他的。如今要了两三次不得，他便指着我的脸说道，‘你别和我充夫人娘子，你老子使了我五千两银子，把你准折卖给我的。好不好，打一顿，撵到下房里睡去。当日有你爷爷在时，希图上我们的富贵，赶着相与的。论理我和你父亲是一辈，如今强压我的头晚了一辈。又不该作了这门亲，倒没的叫人看着赶势利似的。’”[庚辰双行夹批：不通，可笑。遁词如开（闻）。]一行说，一行哭的呜呜咽咽，连王夫人并众姊妹无不落泪。王夫人只得用言语解劝说：“已是遇见了这不晓事的人，可怎么样呢。想当日你叔叔也曾劝过大老爷，不叫作这门亲的。大老爷执意不听，一心情愿，到底作不好了。我的儿，这也是你的命。”迎春哭道：“我不信我的命就这么苦！从小儿没了娘，幸而遇婶娘，这边来过了几年心净日子，如今偏又是这么个结果！”王夫人一面解劝，一面问他随意要在那里安歇。迎春道：“乍乍的离了姊妹们，只是眠思梦想。二则还记挂着我的屋子，还得在园子里住得三五天，死了也甘心了。不知下次还可能得住不得住了呢！”王夫人忙劝道：“快休乱说。不过年轻的夫妻们，斗牙斗齿，亦是万万人之常事，何必说这丧话。”仍命人忙忙的收拾紫菱洲房屋，命姊妹们陪伴着解释，又吩咐宝玉：“不许在老太太跟前走漏一些风声，倘或老太太知道了这些事，都是你说的。”宝玉唯唯的听命。
