--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,10 @@
+如何评价男玩家涌入乙游这股风潮？ - 萨摩耶的回答  <br>
+https://www.zhihu.com/question/665857332/answer/3615931228
+
+萨摩耶：
+别给你那点爱好乱上价值了
+大概知道男玩家什么目的，但其实效果不大。
+首先在男玩家之前，也有这么个群体，天天以恶心乙小妹为乐，对就是乙女腐。感兴趣的可以搜下6199，彻回99。她们不喜欢乙游，也不喜欢这些角色，心里也清楚这些男的根本不可能是一对，但她们不在乎，就是要磕，cp真不真无所谓，恶心到乙小妹就行了。
 
 为什么乙游圈抗拒梦女? - 灵儿的回答 <br>
 https://www.zhihu.com/question/600463594/answer/3160168115
