--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,37 @@
 
 最新 9.16
 
+江美琪 - 亲爱的你怎么不在我身边
+
+作词: 邬裕康
+作曲: 郭子
+编曲: 吕绍淳
+
+这里的空气很新鲜<br>
+这里的小吃很特别<br>
+这里的lette不像水<br>
+这里的夜景很有感觉<br>
+
+在一万英尺的天边<br>
+在有港口view的房间<br>
+在讨价还价的商店<br>
+在凌晨喧闹的三四点<br>
+
+可是亲爱的 你怎么不在我身边<br>
+我们有多少时间能浪费<br>
+电话再甜美<br>
+传真再安慰<br>
+也不足以应付不能拥抱你的遥远<br>
+我的亲爱的 你怎么不在我身边<br>
+一个人过一天 像过一年<br>
+海的那一边<br>
+乌云一整片<br>
+我很想为了你快乐一点<br>
+
+可是亲爱的<br>
+你怎么不在身边<br>
+
+------
 陈少华 - 九月九的酒
 
 作词: 陈树
